--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_inclusion_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_inclusion_plot.tex
@@ -1,79 +1,79 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Wed 04 Dec 2024 06:00:47 PM UTC
+%% Mon 09 Dec 2024 12:46:14 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(15.447,2.025);
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.604,2.025);
-\draw[gp path] (15.447,2.025)--(15.267,2.025);
-\node[gp node right] at (2.240,2.025) {$1.92\times10^{11}$};
+\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\draw[gp path] (15.447,1.845)--(15.267,1.845);
+\node[gp node right] at (2.240,1.845) {$1.92\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.533)--(15.447,3.533);
+\draw[gp path] (2.424,3.383)--(15.447,3.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.533)--(2.604,3.533);
-\draw[gp path] (15.447,3.533)--(15.267,3.533);
-\node[gp node right] at (2.240,3.533) {$1.93\times10^{11}$};
+\draw[gp path] (2.424,3.383)--(2.604,3.383);
+\draw[gp path] (15.447,3.383)--(15.267,3.383);
+\node[gp node right] at (2.240,3.383) {$1.93\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.042)--(15.447,5.042);
+\draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.042)--(2.604,5.042);
-\draw[gp path] (15.447,5.042)--(15.267,5.042);
-\node[gp node right] at (2.240,5.042) {$1.94\times10^{11}$};
+\draw[gp path] (2.424,4.922)--(2.604,4.922);
+\draw[gp path] (15.447,4.922)--(15.267,4.922);
+\node[gp node right] at (2.240,4.922) {$1.94\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.550)--(15.447,6.550);
+\draw[gp path] (2.424,6.460)--(15.447,6.460);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.550)--(2.604,6.550);
-\draw[gp path] (15.447,6.550)--(15.267,6.550);
-\node[gp node right] at (2.240,6.550) {$1.95\times10^{11}$};
+\draw[gp path] (2.424,6.460)--(2.604,6.460);
+\draw[gp path] (15.447,6.460)--(15.267,6.460);
+\node[gp node right] at (2.240,6.460) {$1.95\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,8.058)--(15.447,8.058);
+\draw[gp path] (2.424,7.998)--(15.447,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.058)--(2.604,8.058);
-\draw[gp path] (15.447,8.058)--(15.267,8.058);
-\node[gp node right] at (2.240,8.058) {$1.96\times10^{11}$};
+\draw[gp path] (2.424,7.998)--(2.604,7.998);
+\draw[gp path] (15.447,7.998)--(15.267,7.998);
+\node[gp node right] at (2.240,7.998) {$1.96\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.567)--(15.447,9.567);
+\draw[gp path] (2.424,9.537)--(15.447,9.537);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.567)--(2.604,9.567);
-\draw[gp path] (15.447,9.567)--(15.267,9.567);
-\node[gp node right] at (2.240,9.567) {$1.97\times10^{11}$};
+\draw[gp path] (2.424,9.537)--(2.604,9.537);
+\draw[gp path] (15.447,9.537)--(15.267,9.537);
+\node[gp node right] at (2.240,9.537) {$1.97\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -90,157 +90,154 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(2.424,11.075);
+\draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.424,1.845);
-\draw[gp path] (2.424,11.075)--(2.424,11.255);
+\draw[gp path] (2.424,1.845)--(2.424,2.025);
+\draw[gp path] (2.424,11.075)--(2.424,10.895);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.284,2.025)--(4.284,11.075);
+\draw[gp path] (4.284,1.845)--(4.284,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.284,2.025)--(4.284,1.845);
-\draw[gp path] (4.284,11.075)--(4.284,11.255);
+\draw[gp path] (4.284,1.845)--(4.284,2.025);
+\draw[gp path] (4.284,11.075)--(4.284,10.895);
 \node[gp node left,rotate=270] at (4.284,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.145,2.025)--(6.145,11.075);
+\draw[gp path] (6.145,1.845)--(6.145,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.145,2.025)--(6.145,1.845);
-\draw[gp path] (6.145,11.075)--(6.145,11.255);
+\draw[gp path] (6.145,1.845)--(6.145,2.025);
+\draw[gp path] (6.145,11.075)--(6.145,10.895);
 \node[gp node left,rotate=270] at (6.145,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.005,2.025)--(8.005,11.075);
+\draw[gp path] (8.005,1.845)--(8.005,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.005,2.025)--(8.005,1.845);
-\draw[gp path] (8.005,11.075)--(8.005,11.255);
+\draw[gp path] (8.005,1.845)--(8.005,2.025);
+\draw[gp path] (8.005,11.075)--(8.005,10.895);
 \node[gp node left,rotate=270] at (8.005,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (9.866,2.025)--(9.866,11.075);
+\draw[gp path] (9.866,1.845)--(9.866,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.866,2.025)--(9.866,1.845);
-\draw[gp path] (9.866,11.075)--(9.866,11.255);
+\draw[gp path] (9.866,1.845)--(9.866,2.025);
+\draw[gp path] (9.866,11.075)--(9.866,10.895);
 \node[gp node left,rotate=270] at (9.866,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.726,2.025)--(11.726,11.075);
+\draw[gp path] (11.726,1.845)--(11.726,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.726,2.025)--(11.726,1.845);
-\draw[gp path] (11.726,11.075)--(11.726,11.255);
+\draw[gp path] (11.726,1.845)--(11.726,2.025);
+\draw[gp path] (11.726,11.075)--(11.726,10.895);
 \node[gp node left,rotate=270] at (11.726,1.661) {$250$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.587,2.025)--(13.587,11.075);
+\draw[gp path] (13.587,1.845)--(13.587,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.587,2.025)--(13.587,1.845);
-\draw[gp path] (13.587,11.075)--(13.587,11.255);
+\draw[gp path] (13.587,1.845)--(13.587,2.025);
+\draw[gp path] (13.587,11.075)--(13.587,10.895);
 \node[gp node left,rotate=270] at (13.587,1.661) {$300$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (15.447,2.025)--(15.447,11.075);
+\draw[gp path] (15.447,1.845)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,2.025)--(15.447,1.845);
-\draw[gp path] (15.447,11.075)--(15.447,11.255);
+\draw[gp path] (15.447,1.845)--(15.447,2.025);
+\draw[gp path] (15.447,11.075)--(15.447,10.895);
 \node[gp node left,rotate=270] at (15.447,1.661) {$350$};
-\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.451)--(2.424,10.149)--(2.424,9.920)--(2.424,9.836)--(2.461,9.505)%
-  --(2.461,9.494)--(2.461,9.404)--(2.461,9.250)--(2.498,9.202)--(2.498,9.011)--(2.498,8.858)%
-  --(2.498,8.818)--(2.498,8.675)--(2.498,8.512)--(2.536,8.284)--(2.536,8.209)--(2.536,7.921)%
-  --(2.536,7.869)--(2.536,7.819)--(2.573,7.716)--(2.573,7.521)--(2.573,7.394)--(2.573,7.006)%
-  --(2.573,6.935)--(2.573,6.766)--(2.610,6.762)--(2.610,6.758)--(2.610,6.753)--(2.647,6.703)%
-  --(2.647,6.701)--(2.647,6.623)--(2.684,6.504)--(2.684,6.434)--(2.684,6.412)--(2.684,6.222)%
-  --(2.684,6.191)--(2.722,6.090)--(2.722,6.001)--(2.722,5.978)--(2.722,5.920)--(2.759,5.863)%
-  --(2.759,5.804)--(2.759,5.777)--(2.759,5.722)--(2.759,5.693)--(2.759,5.673)--(2.759,5.546)%
-  --(2.759,5.457)--(2.796,5.444)--(2.796,5.438)--(2.796,5.424)--(2.796,5.400)--(2.833,5.368)%
-  --(2.833,5.224)--(2.833,5.190)--(2.871,5.127)--(2.945,5.125)--(2.945,5.096)--(2.945,5.044)%
-  --(2.945,5.042)--(2.982,5.000)--(2.982,4.972)--(3.019,4.968)--(3.019,4.910)--(3.057,4.906)%
-  --(3.131,4.875)--(3.131,4.853)--(3.131,4.846)--(3.131,4.785)--(3.168,4.585)--(3.205,4.520)%
-  --(3.243,4.496)--(3.243,4.492)--(3.243,4.379)--(3.317,4.375)--(3.354,4.360)--(3.354,4.320)%
-  --(3.354,4.297)--(3.391,4.283)--(3.391,4.243)--(3.391,4.237)--(3.429,4.180)--(3.429,4.123)%
-  --(3.466,4.089)--(3.466,4.079)--(3.577,4.062)--(3.577,4.059)--(3.615,4.050)--(3.615,4.038)%
-  --(3.689,4.008)--(3.726,3.973)--(3.726,3.971)--(3.764,3.942)--(3.838,3.923)--(3.838,3.918)%
-  --(3.838,3.909)--(3.875,3.895)--(3.912,3.894)--(3.912,3.889)--(3.912,3.851)--(3.950,3.817)%
-  --(4.098,3.815)--(4.098,3.813)--(4.136,3.811)--(4.247,3.794)--(4.247,3.793)--(4.247,3.748)%
-  --(4.284,3.721)--(4.322,3.717)--(4.433,3.717)--(4.470,3.702)--(4.470,3.690)--(4.508,3.686)%
-  --(4.545,3.579)--(4.545,3.420)--(4.545,3.394)--(4.582,3.388)--(4.619,3.341)--(4.619,3.324)%
-  --(4.619,3.286)--(4.657,3.259)--(4.657,3.217)--(4.694,3.212)--(4.694,3.037)--(4.768,2.995)%
-  --(4.768,2.963)--(4.843,2.952)--(4.880,2.945)--(4.917,2.934)--(4.917,2.926)--(4.917,2.867)%
-  --(4.991,2.863)--(5.029,2.863)--(5.066,2.862)--(5.066,2.855)--(5.103,2.823)--(5.103,2.822)%
-  --(5.140,2.803)--(5.140,2.777)--(5.177,2.756)--(5.326,2.744)--(5.438,2.703)--(5.512,2.667)%
-  --(5.512,2.661)--(5.512,2.657)--(5.587,2.647)--(5.624,2.635)--(5.661,2.632)--(5.736,2.625)%
-  --(5.847,2.589)--(5.847,2.572)--(5.884,2.557)--(5.922,2.549)--(6.033,2.536)--(6.219,2.529)%
-  --(6.740,2.529)--(6.740,2.858)--(6.815,2.752)--(6.852,2.738)--(6.889,2.737)--(6.926,2.721)%
-  --(6.963,2.720)--(6.963,2.706)--(7.001,2.632)--(7.001,2.630)--(7.038,2.629)--(7.038,2.599)%
-  --(7.038,2.591)--(7.149,2.527)--(7.149,2.469)--(7.149,2.452)--(7.187,2.434)--(7.224,2.429)%
-  --(7.224,2.409)--(7.261,2.396)--(7.336,2.371)--(7.373,2.370)--(7.410,2.340)--(7.708,2.333)%
-  --(7.819,2.332)--(7.819,2.327)--(7.931,2.321)--(7.931,2.304)--(7.931,2.294)--(8.042,2.287)%
-  --(8.117,2.276)--(8.191,2.259)--(8.489,2.247)--(8.489,2.226)--(8.601,2.217)--(8.712,2.186)%
-  --(8.898,2.186)--(8.936,3.043)--(8.936,3.041)--(8.936,3.034)--(9.010,3.031)--(9.047,3.014)%
-  --(9.084,3.001)--(9.122,2.978)--(9.196,2.971)--(9.233,2.942)--(9.270,2.936)--(9.308,2.913)%
-  --(9.345,2.897)--(9.345,2.864)--(9.456,2.785)--(9.531,2.766)--(9.568,2.763)--(9.568,2.739)%
-  --(9.642,2.732)--(9.642,2.730)--(9.754,2.719)--(9.791,2.661)--(9.829,2.661)--(9.866,2.647)%
-  --(9.903,2.625)--(10.015,2.624)--(10.052,2.617)--(10.052,2.581)--(10.089,2.579)--(10.089,2.555)%
-  --(10.126,2.543)--(10.126,2.531)--(10.163,2.529)--(10.535,2.521)--(10.647,2.519)--(10.647,2.516)%
-  --(10.796,2.490)--(10.833,2.462)--(10.833,2.448)--(10.945,2.447)--(11.094,2.447)--(11.094,3.046)%
-  --(11.131,3.035)--(11.131,3.023)--(11.168,3.018)--(11.168,2.952)--(11.242,2.949)--(11.317,2.898)%
-  --(11.317,2.870)--(11.354,2.817)--(11.354,2.794)--(11.391,2.789)--(11.726,2.762)--(11.763,2.724)%
-  --(11.838,2.712)--(11.949,2.694)--(11.987,2.670)--(12.135,2.659)--(12.396,2.642)--(12.396,2.640)%
-  --(12.656,2.639)--(12.768,2.622)--(12.768,2.608)--(12.880,2.602)--(12.880,2.590)--(13.028,2.579)%
-  --(13.103,2.566)--(13.140,2.559)--(13.214,2.557)--(13.326,2.557)--(13.326,2.969)--(13.326,2.958)%
-  --(13.363,2.932)--(13.363,2.895)--(13.438,2.872)--(13.475,2.860)--(13.512,2.840)--(13.549,2.817)%
-  --(13.624,2.816)--(13.698,2.773)--(13.698,2.759)--(13.735,2.744)--(13.810,2.608)--(13.847,2.600)%
-  --(13.921,2.589)--(13.921,2.543)--(13.996,2.536)--(14.145,2.519)--(14.182,2.474)--(14.368,2.458)%
-  --(14.442,2.451)--(14.480,2.446)--(14.480,2.436)--(14.591,2.428)--(14.777,2.406)--(14.889,2.403)%
-  --(15.075,2.378)--(15.112,2.377)--(15.112,2.353)--(15.335,2.340);
+\draw[gp path] (2.424,10.431)--(2.424,10.299)--(2.461,10.059)--(2.461,9.898)--(2.461,9.667)%
+  --(2.461,9.348)--(2.461,9.110)--(2.498,8.721)--(2.498,8.375)--(2.498,8.291)--(2.498,8.140)%
+  --(2.498,8.059)--(2.498,7.834)--(2.536,7.776)--(2.536,7.581)--(2.536,7.549)--(2.536,7.499)%
+  --(2.536,7.465)--(2.536,7.421)--(2.573,7.375)--(2.573,7.365)--(2.573,7.278)--(2.573,7.253)%
+  --(2.573,7.120)--(2.610,7.029)--(2.610,6.811)--(2.610,6.767)--(2.610,6.744)--(2.647,6.640)%
+  --(2.647,6.629)--(2.647,6.615)--(2.684,6.541)--(2.684,6.490)--(2.722,6.420)--(2.722,6.415)%
+  --(2.759,6.274)--(2.796,6.146)--(2.833,6.121)--(2.833,6.100)--(2.871,6.061)--(2.871,6.052)%
+  --(2.871,5.845)--(2.908,5.841)--(2.908,5.798)--(2.908,5.715)--(2.945,5.664)--(2.982,5.613)%
+  --(3.019,5.394)--(3.019,5.376)--(3.019,5.197)--(3.019,5.137)--(3.057,5.087)--(3.094,5.023)%
+  --(3.131,4.974)--(3.205,4.973)--(3.280,4.923)--(3.317,4.918)--(3.317,4.866)--(3.354,4.834)%
+  --(3.391,4.818)--(3.391,4.815)--(3.429,4.797)--(3.429,4.735)--(3.429,4.699)--(3.466,4.689)%
+  --(3.466,4.678)--(3.466,4.667)--(3.466,4.622)--(3.503,4.567)--(3.540,4.501)--(3.577,4.454)%
+  --(3.577,4.446)--(3.577,4.441)--(3.577,4.414)--(3.615,4.406)--(3.615,4.356)--(3.652,4.320)%
+  --(3.652,4.298)--(3.726,4.235)--(3.726,4.221)--(3.726,4.195)--(3.801,4.188)--(3.838,4.145)%
+  --(3.912,4.129)--(3.950,4.115)--(4.024,4.113)--(4.098,4.107)--(4.098,4.081)--(4.173,4.075)%
+  --(4.173,4.021)--(4.210,3.984)--(4.210,3.937)--(4.284,3.928)--(4.322,3.899)--(4.359,3.889)%
+  --(4.359,3.844)--(4.396,3.826)--(4.433,3.826)--(4.433,3.477)--(4.433,3.405)--(4.470,3.342)%
+  --(4.470,3.336)--(4.470,3.313)--(4.582,3.256)--(4.582,3.238)--(4.582,3.220)--(4.619,3.164)%
+  --(4.619,3.142)--(4.657,3.115)--(4.657,3.102)--(4.694,3.046)--(4.768,3.012)--(4.843,2.964)%
+  --(4.880,2.953)--(4.917,2.946)--(4.954,2.920)--(5.029,2.883)--(5.177,2.871)--(5.252,2.868)%
+  --(5.252,2.866)--(5.363,2.851)--(5.438,2.842)--(5.438,2.824)--(5.512,2.815)--(5.587,2.801)%
+  --(5.661,2.792)--(5.773,2.786)--(5.810,2.781)--(5.847,2.776)--(5.884,2.759)--(5.959,2.752)%
+  --(5.959,2.737)--(6.033,2.692)--(6.070,2.668)--(6.108,2.636)--(6.145,2.627)--(6.256,2.606)%
+  --(6.443,2.597)--(6.629,2.594)--(6.666,2.594)--(6.703,3.070)--(6.740,2.982)--(6.852,2.976)%
+  --(7.001,2.956)--(7.001,2.864)--(7.001,2.858)--(7.261,2.778)--(7.336,2.768)--(7.373,2.754)%
+  --(7.410,2.730)--(7.447,2.722)--(7.522,2.708)--(7.522,2.702)--(7.522,2.692)--(7.559,2.661)%
+  --(7.633,2.645)--(7.670,2.632)--(7.670,2.627)--(7.745,2.589)--(7.782,2.570)--(7.856,2.556)%
+  --(7.856,2.526)--(7.856,2.524)--(8.005,2.501)--(8.005,2.481)--(8.005,2.303)--(8.080,2.292)%
+  --(8.154,2.285)--(8.340,2.280)--(8.415,2.277)--(8.415,2.266)--(8.489,2.259)--(8.526,2.245)%
+  --(8.675,2.245)--(8.712,2.238)--(8.712,2.219)--(8.898,2.211)--(8.898,2.199)--(8.898,3.001)%
+  --(8.936,2.985)--(8.936,2.892)--(8.936,2.862)--(8.973,2.822)--(9.010,2.746)--(9.122,2.707)%
+  --(9.159,2.706)--(9.159,2.674)--(9.159,2.672)--(9.196,2.648)--(9.308,2.647)--(9.642,2.634)%
+  --(9.680,2.623)--(9.717,2.612)--(9.791,2.599)--(9.866,2.578)--(9.903,2.566)--(10.089,2.564)%
+  --(10.163,2.542)--(10.238,2.502)--(10.275,2.442)--(10.461,2.420)--(10.461,2.403)--(10.610,2.398)%
+  --(10.647,2.382)--(10.759,2.355)--(10.945,2.347)--(11.019,2.346)--(11.056,2.332)--(11.094,2.295)%
+  --(11.131,2.295)--(11.168,3.039)--(11.168,3.034)--(11.205,3.020)--(11.354,3.004)--(11.428,2.994)%
+  --(11.428,2.983)--(11.503,2.958)--(11.503,2.945)--(11.577,2.938)--(11.615,2.900)--(11.689,2.889)%
+  --(11.726,2.885)--(11.763,2.884)--(11.801,2.855)--(11.875,2.849)--(11.875,2.830)--(11.987,2.790)%
+  --(12.024,2.769)--(12.061,2.646)--(12.173,2.634)--(12.210,2.633)--(12.433,2.612)--(12.619,2.599)%
+  --(12.731,2.593)--(12.768,2.568)--(12.917,2.553)--(12.954,2.553)--(13.066,2.543)--(13.140,2.492)%
+  --(13.252,2.463)--(13.401,2.463)--(13.401,2.852)--(13.401,2.828)--(13.475,2.762)--(13.512,2.753)%
+  --(13.512,2.705)--(13.512,2.645)--(13.512,2.633)--(13.624,2.633)--(13.624,2.629)--(13.661,2.616)%
+  --(13.661,2.569)--(13.698,2.549)--(13.773,2.491)--(13.810,2.490)--(13.884,2.478)--(13.921,2.470)%
+  --(13.959,2.467)--(14.219,2.462)--(14.219,2.457)--(14.219,2.431)--(14.256,2.427)--(14.256,2.397)%
+  --(14.368,2.374)--(14.591,2.363)--(14.591,2.327)--(14.740,2.326)--(14.740,2.278)--(14.926,2.247)%
+  --(15.075,2.242)--(15.075,2.218)--(15.149,2.199);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,6.550) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time [S]};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
+\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.025cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
