--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_weight_change_plot.tex
@@ -1,283 +1,277 @@
-\begin{tikzpicture}[gnuplot]
+\tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Wed 04 Dec 2024 06:23:47 PM UTC
-\path (0.000,0.000) rectangle (12.500,8.750);
+%% Mon 09 Dec 2024 01:23:05 PM UTC
+\path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(11.947,2.025);
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.604,2.025);
-\draw[gp path] (11.947,2.025)--(11.767,2.025);
-\node[gp node right] at (2.240,2.025) {$1.85\times10^{11}$};
+\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\draw[gp path] (15.447,1.845)--(15.267,1.845);
+\node[gp node right] at (2.240,1.845) {$1.85\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.605)--(11.947,2.605);
+\draw[gp path] (2.424,2.768)--(15.447,2.768);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.605)--(2.604,2.605);
-\draw[gp path] (11.947,2.605)--(11.767,2.605);
-\node[gp node right] at (2.240,2.605) {$1.9\times10^{11}$};
+\draw[gp path] (2.424,2.768)--(2.604,2.768);
+\draw[gp path] (15.447,2.768)--(15.267,2.768);
+\node[gp node right] at (2.240,2.768) {$1.9\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.185)--(11.947,3.185);
+\draw[gp path] (2.424,3.691)--(15.447,3.691);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.185)--(2.604,3.185);
-\draw[gp path] (11.947,3.185)--(11.767,3.185);
-\node[gp node right] at (2.240,3.185) {$1.95\times10^{11}$};
+\draw[gp path] (2.424,3.691)--(2.604,3.691);
+\draw[gp path] (15.447,3.691)--(15.267,3.691);
+\node[gp node right] at (2.240,3.691) {$1.95\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.765)--(11.947,3.765);
+\draw[gp path] (2.424,4.614)--(15.447,4.614);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.765)--(2.604,3.765);
-\draw[gp path] (11.947,3.765)--(11.767,3.765);
-\node[gp node right] at (2.240,3.765) {$2\times10^{11}$};
+\draw[gp path] (2.424,4.614)--(2.604,4.614);
+\draw[gp path] (15.447,4.614)--(15.267,4.614);
+\node[gp node right] at (2.240,4.614) {$2\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.345)--(11.947,4.345);
+\draw[gp path] (2.424,5.537)--(15.447,5.537);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.345)--(2.604,4.345);
-\draw[gp path] (11.947,4.345)--(11.767,4.345);
-\node[gp node right] at (2.240,4.345) {$2.05\times10^{11}$};
+\draw[gp path] (2.424,5.537)--(2.604,5.537);
+\draw[gp path] (15.447,5.537)--(15.267,5.537);
+\node[gp node right] at (2.240,5.537) {$2.05\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.925)--(11.947,4.925);
+\draw[gp path] (2.424,6.460)--(15.447,6.460);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.925)--(2.604,4.925);
-\draw[gp path] (11.947,4.925)--(11.767,4.925);
-\node[gp node right] at (2.240,4.925) {$2.1\times10^{11}$};
+\draw[gp path] (2.424,6.460)--(2.604,6.460);
+\draw[gp path] (15.447,6.460)--(15.267,6.460);
+\node[gp node right] at (2.240,6.460) {$2.1\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.505)--(11.947,5.505);
+\draw[gp path] (2.424,7.383)--(15.447,7.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.505)--(2.604,5.505);
-\draw[gp path] (11.947,5.505)--(11.767,5.505);
-\node[gp node right] at (2.240,5.505) {$2.15\times10^{11}$};
+\draw[gp path] (2.424,7.383)--(2.604,7.383);
+\draw[gp path] (15.447,7.383)--(15.267,7.383);
+\node[gp node right] at (2.240,7.383) {$2.15\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.085)--(11.947,6.085);
+\draw[gp path] (2.424,8.306)--(15.447,8.306);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.085)--(2.604,6.085);
-\draw[gp path] (11.947,6.085)--(11.767,6.085);
-\node[gp node right] at (2.240,6.085) {$2.2\times10^{11}$};
+\draw[gp path] (2.424,8.306)--(2.604,8.306);
+\draw[gp path] (15.447,8.306)--(15.267,8.306);
+\node[gp node right] at (2.240,8.306) {$2.2\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.665)--(11.947,6.665);
+\draw[gp path] (2.424,9.229)--(15.447,9.229);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.665)--(2.604,6.665);
-\draw[gp path] (11.947,6.665)--(11.767,6.665);
-\node[gp node right] at (2.240,6.665) {$2.25\times10^{11}$};
+\draw[gp path] (2.424,9.229)--(2.604,9.229);
+\draw[gp path] (15.447,9.229)--(15.267,9.229);
+\node[gp node right] at (2.240,9.229) {$2.25\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.245)--(11.947,7.245);
+\draw[gp path] (2.424,10.152)--(15.447,10.152);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.245)--(2.604,7.245);
-\draw[gp path] (11.947,7.245)--(11.767,7.245);
-\node[gp node right] at (2.240,7.245) {$2.3\times10^{11}$};
+\draw[gp path] (2.424,10.152)--(2.604,10.152);
+\draw[gp path] (15.447,10.152)--(15.267,10.152);
+\node[gp node right] at (2.240,10.152) {$2.3\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.825)--(11.947,7.825);
+\draw[gp path] (2.424,11.075)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.825)--(2.604,7.825);
-\draw[gp path] (11.947,7.825)--(11.767,7.825);
-\node[gp node right] at (2.240,7.825) {$2.35\times10^{11}$};
+\draw[gp path] (2.424,11.075)--(2.604,11.075);
+\draw[gp path] (15.447,11.075)--(15.267,11.075);
+\node[gp node right] at (2.240,11.075) {$2.35\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(2.424,7.825);
+\draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.424,1.845);
-\draw[gp path] (2.424,7.825)--(2.424,8.005);
+\draw[gp path] (2.424,1.845)--(2.424,2.025);
+\draw[gp path] (2.424,11.075)--(2.424,10.895);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (3.784,2.025)--(3.784,7.825);
+\draw[gp path] (4.284,1.845)--(4.284,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (3.784,2.025)--(3.784,1.845);
-\draw[gp path] (3.784,7.825)--(3.784,8.005);
-\node[gp node left,rotate=270] at (3.784,1.661) {$50$};
+\draw[gp path] (4.284,1.845)--(4.284,2.025);
+\draw[gp path] (4.284,11.075)--(4.284,10.895);
+\node[gp node left,rotate=270] at (4.284,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (5.145,2.025)--(5.145,7.825);
+\draw[gp path] (6.145,1.845)--(6.145,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (5.145,2.025)--(5.145,1.845);
-\draw[gp path] (5.145,7.825)--(5.145,8.005);
-\node[gp node left,rotate=270] at (5.145,1.661) {$100$};
+\draw[gp path] (6.145,1.845)--(6.145,2.025);
+\draw[gp path] (6.145,11.075)--(6.145,10.895);
+\node[gp node left,rotate=270] at (6.145,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.505,2.025)--(6.505,7.825);
+\draw[gp path] (8.005,1.845)--(8.005,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.505,2.025)--(6.505,1.845);
-\draw[gp path] (6.505,7.825)--(6.505,8.005);
-\node[gp node left,rotate=270] at (6.505,1.661) {$150$};
+\draw[gp path] (8.005,1.845)--(8.005,2.025);
+\draw[gp path] (8.005,11.075)--(8.005,10.895);
+\node[gp node left,rotate=270] at (8.005,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (7.866,2.025)--(7.866,7.825);
+\draw[gp path] (9.866,1.845)--(9.866,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (7.866,2.025)--(7.866,1.845);
-\draw[gp path] (7.866,7.825)--(7.866,8.005);
-\node[gp node left,rotate=270] at (7.866,1.661) {$200$};
+\draw[gp path] (9.866,1.845)--(9.866,2.025);
+\draw[gp path] (9.866,11.075)--(9.866,10.895);
+\node[gp node left,rotate=270] at (9.866,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (9.226,2.025)--(9.226,7.825);
+\draw[gp path] (11.726,1.845)--(11.726,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.226,2.025)--(9.226,1.845);
-\draw[gp path] (9.226,7.825)--(9.226,8.005);
-\node[gp node left,rotate=270] at (9.226,1.661) {$250$};
+\draw[gp path] (11.726,1.845)--(11.726,2.025);
+\draw[gp path] (11.726,11.075)--(11.726,10.895);
+\node[gp node left,rotate=270] at (11.726,1.661) {$250$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (10.587,2.025)--(10.587,7.825);
+\draw[gp path] (13.587,1.845)--(13.587,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (10.587,2.025)--(10.587,1.845);
-\draw[gp path] (10.587,7.825)--(10.587,8.005);
-\node[gp node left,rotate=270] at (10.587,1.661) {$300$};
+\draw[gp path] (13.587,1.845)--(13.587,2.025);
+\draw[gp path] (13.587,11.075)--(13.587,10.895);
+\node[gp node left,rotate=270] at (13.587,1.661) {$300$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.947,2.025)--(11.947,7.825);
+\draw[gp path] (15.447,1.845)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.947,2.025)--(11.947,1.845);
-\draw[gp path] (11.947,7.825)--(11.947,8.005);
-\node[gp node left,rotate=270] at (11.947,1.661) {$350$};
-\draw[gp path] (2.424,7.825)--(2.424,2.025)--(11.947,2.025)--(11.947,7.825)--cycle;
+\draw[gp path] (15.447,1.845)--(15.447,2.025);
+\draw[gp path] (15.447,11.075)--(15.447,10.895);
+\node[gp node left,rotate=270] at (15.447,1.661) {$350$};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,3.478)--(2.424,3.448)--(2.424,3.442)--(2.424,3.426)--(2.451,3.401)%
-  --(2.451,3.381)--(2.451,3.361)--(2.451,3.352)--(2.451,3.349)--(2.451,3.329)--(2.478,3.324)%
-  --(2.478,3.319)--(2.478,3.307)--(2.478,3.298)--(2.478,3.285)--(2.506,3.265)--(2.506,3.242)%
-  --(2.506,3.236)--(2.506,3.228)--(2.533,3.227)--(2.533,3.216)--(2.533,3.211)--(2.560,3.202)%
-  --(2.560,3.194)--(2.560,3.192)--(2.560,3.184)--(2.587,3.179)--(2.587,3.175)--(2.587,3.174)%
-  --(2.587,3.165)--(2.587,3.160)--(2.614,3.159)--(2.614,3.154)--(2.614,3.153)--(2.614,3.142)%
-  --(2.642,3.136)--(2.642,3.135)--(2.642,3.133)--(2.642,3.129)--(2.669,3.125)--(2.669,3.124)%
-  --(2.669,3.122)--(2.696,3.117)--(2.696,3.116)--(2.696,3.112)--(2.696,3.101)--(2.696,3.081)%
-  --(2.723,3.078)--(2.723,3.074)--(2.751,3.071)--(2.751,3.064)--(2.778,3.064)--(2.805,3.061)%
-  --(2.805,3.055)--(2.832,3.053)--(2.832,3.049)--(2.859,3.047)--(2.859,3.044)--(2.914,3.042)%
-  --(2.914,3.038)--(2.941,3.038)--(2.941,3.032)--(2.941,3.031)--(2.941,3.029)--(2.995,3.026)%
-  --(3.023,3.024)--(3.050,3.022)--(3.050,3.017)--(3.050,3.016)--(3.077,3.015)--(3.077,3.012)%
-  --(3.104,3.009)--(3.131,3.008)--(3.159,3.005)--(3.186,3.004)--(3.240,3.003)--(3.295,3.002)%
-  --(3.295,3.001)--(3.295,3.000)--(3.322,2.998)--(3.376,2.998)--(3.404,2.997)--(3.431,2.995)%
-  --(3.485,2.990)--(3.512,2.988)--(3.512,2.982)--(3.540,2.981)--(3.567,2.977)--(3.594,2.972)%
-  --(3.594,2.969)--(3.648,2.967)--(3.703,2.965)--(3.730,2.964)--(3.730,2.962)--(3.730,2.958)%
-  --(3.812,2.957)--(3.893,2.957)--(3.893,2.956)--(3.948,2.625)--(3.975,2.622)--(4.002,2.621)%
-  --(4.029,2.619)--(4.057,2.619)--(4.057,2.618)--(4.084,2.615)--(4.084,2.613)--(4.084,2.607)%
-  --(4.111,2.606)--(4.138,2.604)--(4.165,2.603)--(4.165,2.602)--(4.274,2.599)--(4.301,2.599)%
-  --(4.301,2.598)--(4.301,2.596)--(4.329,2.594)--(4.356,2.593)--(4.383,2.593)--(4.465,2.593)%
-  --(4.492,2.591)--(4.546,2.589)--(4.682,2.588)--(4.682,2.587)--(4.710,2.584)--(4.791,2.583)%
-  --(4.818,2.582)--(4.818,2.581)--(4.818,2.579)--(4.846,2.579)--(4.846,2.578)--(4.873,2.578)%
-  --(4.982,2.577)--(5.063,2.577)--(5.118,2.575)--(5.145,2.575)--(5.145,2.574)--(5.199,2.574)%
-  --(5.254,2.573)--(5.281,2.572)--(5.390,2.569)--(5.390,2.567)--(5.417,2.567)--(5.444,2.566)%
-  --(5.499,2.565)--(5.526,7.670)--(5.553,7.670)--(5.607,7.667)--(5.662,7.666)--(5.689,7.665)%
-  --(5.716,7.665)--(5.798,7.656)--(5.825,7.654)--(5.879,7.653)--(5.934,7.653)--(5.934,7.649)%
-  --(5.988,7.648)--(6.016,7.648)--(6.043,7.645)--(6.206,7.642)--(6.260,7.641)--(6.315,7.640)%
-  --(6.396,7.639)--(6.451,7.638)--(6.478,7.637)--(6.641,7.637)--(6.723,7.636)--(6.859,7.636)%
-  --(6.913,7.635)--(6.913,7.634)--(6.941,7.633)--(7.022,7.632)--(7.022,7.631)--(7.104,7.631)%
-  --(7.186,2.555)--(7.213,2.551)--(7.294,2.550)--(7.294,2.549)--(7.294,2.544)--(7.349,2.544)%
-  --(7.376,2.541)--(7.403,2.541)--(7.403,2.540)--(7.458,2.539)--(7.539,2.539)--(7.648,2.539)%
-  --(7.784,2.538)--(7.893,2.538)--(7.975,2.537)--(8.002,2.536)--(8.247,2.536)--(8.274,2.536)%
-  --(8.355,2.533)--(8.492,2.533)--(8.546,2.532)--(8.573,2.532)--(8.600,2.531)--(8.655,2.530)%
-  --(8.682,2.529)--(8.845,7.617)--(8.927,7.616)--(9.036,7.614)--(9.063,7.614)--(9.498,7.614)%
-  --(9.553,7.614)--(9.879,7.611)--(9.906,7.611)--(9.961,7.609)--(10.042,7.609)--(10.124,7.609)%
-  --(10.151,7.609)--(10.423,2.530)--(10.478,2.528)--(10.777,2.527)--(10.831,2.526)--(11.104,2.526)%
-  --(11.158,2.525)--(11.212,2.524)--(11.294,2.524)--(11.702,2.523)--(11.729,2.522)--(11.784,2.522)%
-  --(11.811,2.520);
+\draw[gp path] (2.424,4.175)--(2.424,4.108)--(2.424,4.078)--(2.461,4.069)--(2.461,4.057)%
+  --(2.461,4.046)--(2.461,4.018)--(2.498,4.015)--(2.498,4.003)--(2.498,3.983)--(2.498,3.971)%
+  --(2.498,3.970)--(2.536,3.964)--(2.536,3.947)--(2.536,3.938)--(2.536,3.932)--(2.536,3.922)%
+  --(2.573,3.914)--(2.573,3.890)--(2.573,3.870)--(2.573,3.844)--(2.610,3.837)--(2.610,3.826)%
+  --(2.610,3.756)--(2.610,3.753)--(2.610,3.741)--(2.647,3.731)--(2.647,3.713)--(2.647,3.711)%
+  --(2.647,3.672)--(2.684,3.665)--(2.684,3.653)--(2.684,3.646)--(2.684,3.642)--(2.684,3.632)%
+  --(2.722,3.622)--(2.759,3.620)--(2.796,3.620)--(2.833,3.613)--(2.833,3.610)--(2.833,3.606)%
+  --(2.833,3.605)--(2.833,3.604)--(2.871,3.595)--(2.871,3.593)--(2.871,3.590)--(2.908,3.576)%
+  --(2.908,3.574)--(2.908,3.570)--(2.982,3.566)--(2.982,3.563)--(2.982,3.552)--(2.982,3.544)%
+  --(3.019,3.540)--(3.019,3.529)--(3.057,3.527)--(3.094,3.519)--(3.131,3.518)--(3.168,3.512)%
+  --(3.168,3.509)--(3.168,3.506)--(3.168,3.505)--(3.205,3.504)--(3.243,3.502)--(3.280,3.497)%
+  --(3.280,3.492)--(3.280,3.484)--(3.317,3.482)--(3.354,3.480)--(3.391,3.478)--(3.391,3.469)%
+  --(3.429,3.469)--(3.466,3.466)--(3.466,3.462)--(3.615,3.429)--(3.652,3.425)--(3.652,3.420)%
+  --(3.689,3.419)--(3.764,3.411)--(3.801,3.409)--(3.801,3.407)--(3.801,3.403)--(3.838,3.401)%
+  --(3.875,3.395)--(3.912,3.393)--(3.912,3.391)--(4.024,3.390)--(4.024,3.388)--(4.061,3.387)%
+  --(4.136,3.384)--(4.210,3.381)--(4.210,3.380)--(4.247,3.379)--(4.284,3.377)--(4.284,3.369)%
+  --(4.284,3.367)--(4.433,2.852)--(4.433,2.849)--(4.433,2.843)--(4.508,2.842)--(4.508,2.836)%
+  --(4.508,2.830)--(4.545,2.827)--(4.582,2.827)--(4.582,2.824)--(4.619,2.823)--(4.843,2.821)%
+  --(4.880,2.820)--(4.917,2.815)--(4.917,2.812)--(4.917,2.809)--(4.954,2.805)--(4.954,2.803)%
+  --(4.991,2.794)--(5.029,2.793)--(5.103,2.791)--(5.140,2.788)--(5.215,2.787)--(5.252,2.785)%
+  --(5.363,2.784)--(5.401,2.780)--(5.475,2.779)--(5.512,2.775)--(5.550,2.774)--(5.661,2.774)%
+  --(5.698,2.774)--(5.736,2.773)--(5.773,2.772)--(6.033,2.769)--(6.108,2.767)--(6.554,2.766)%
+  --(6.591,2.765)--(6.591,2.763)--(6.629,2.762)--(6.852,10.895)--(6.963,10.894)--(7.001,10.893)%
+  --(7.001,10.892)--(7.075,10.891)--(7.075,10.886)--(7.112,10.881)--(7.187,10.878)--(7.187,10.876)%
+  --(7.261,10.873)--(7.484,10.872)--(7.670,10.870)--(7.745,10.863)--(7.856,10.863)--(7.968,10.862)%
+  --(8.042,10.861)--(8.117,10.858)--(8.266,10.856)--(8.415,10.855)--(8.489,10.853)--(8.489,10.850)%
+  --(8.563,10.847)--(8.563,10.846)--(8.638,10.846)--(8.749,10.846)--(8.749,10.844)--(8.787,10.844)%
+  --(8.936,2.734)--(8.973,2.734)--(9.010,2.731)--(9.047,2.728)--(9.122,2.727)--(9.122,2.722)%
+  --(9.233,2.715)--(9.270,2.714)--(9.419,2.712)--(9.568,2.711)--(9.754,2.711)--(9.791,2.710)%
+  --(9.866,2.710)--(10.498,2.709)--(10.573,2.708)--(10.759,2.708)--(10.796,10.704)--(12.580,10.219)%
+  --(13.512,2.704)--(13.773,2.703)--(13.810,2.703)--(13.959,2.703)--(14.182,2.703)--(14.368,2.702)%
+  --(14.703,2.701)--(15.149,2.700);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.825)--(2.424,2.025)--(11.947,2.025)--(11.947,7.825)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,4.925) {Objective value};
-\node[gp node center] at (7.185,0.215) {Relative time [S]};
-\node[gp node center] at (7.185,8.287) {Objective value for Weekly Schedule};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
+\node[gp node center] at (8.935,0.215) {Relative time ($\tau$) [S]};
+\node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.025cm}}{\pgfpoint{11.947cm}{7.825cm}}
-\end{tikzpicture}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\endtikzpicture
 %% gnuplot variables
