--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -202,6 +202,7 @@ Large Neighborhood Search
 \input{tex/introduction.tex}
 \input{tex/solution_method.tex}
 \input{tex/results.tex}
+\input{tex/case_study.tex}
 \input{tex/discussion.tex}
 
 \bibliography{refs}
