--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_exclusion_plot.tex
@@ -1,127 +1,115 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Thu 05 Dec 2024 01:28:56 PM UTC
+%% Mon 09 Dec 2024 12:52:22 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(15.447,2.025);
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.604,2.025);
-\draw[gp path] (15.447,2.025)--(15.267,2.025);
-\node[gp node right] at (2.240,2.025) {$1.89\times10^{11}$};
+\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\draw[gp path] (15.447,1.845)--(15.267,1.845);
+\node[gp node right] at (2.240,1.845) {$1.9\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.930)--(15.447,2.930);
+\draw[gp path] (2.424,2.871)--(15.447,2.871);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.930)--(2.604,2.930);
-\draw[gp path] (15.447,2.930)--(15.267,2.930);
-\node[gp node right] at (2.240,2.930) {$1.9\times10^{11}$};
+\draw[gp path] (2.424,2.871)--(2.604,2.871);
+\draw[gp path] (15.447,2.871)--(15.267,2.871);
+\node[gp node right] at (2.240,2.871) {$1.91\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.835)--(15.447,3.835);
+\draw[gp path] (2.424,3.896)--(15.447,3.896);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.835)--(2.604,3.835);
-\draw[gp path] (15.447,3.835)--(15.267,3.835);
-\node[gp node right] at (2.240,3.835) {$1.91\times10^{11}$};
+\draw[gp path] (2.424,3.896)--(2.604,3.896);
+\draw[gp path] (15.447,3.896)--(15.267,3.896);
+\node[gp node right] at (2.240,3.896) {$1.92\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.740)--(15.447,4.740);
+\draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.740)--(2.604,4.740);
-\draw[gp path] (15.447,4.740)--(15.267,4.740);
-\node[gp node right] at (2.240,4.740) {$1.92\times10^{11}$};
+\draw[gp path] (2.424,4.922)--(2.604,4.922);
+\draw[gp path] (15.447,4.922)--(15.267,4.922);
+\node[gp node right] at (2.240,4.922) {$1.93\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.645)--(15.447,5.645);
+\draw[gp path] (2.424,5.947)--(15.447,5.947);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.645)--(2.604,5.645);
-\draw[gp path] (15.447,5.645)--(15.267,5.645);
-\node[gp node right] at (2.240,5.645) {$1.93\times10^{11}$};
+\draw[gp path] (2.424,5.947)--(2.604,5.947);
+\draw[gp path] (15.447,5.947)--(15.267,5.947);
+\node[gp node right] at (2.240,5.947) {$1.94\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.550)--(15.447,6.550);
+\draw[gp path] (2.424,6.973)--(15.447,6.973);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.550)--(2.604,6.550);
-\draw[gp path] (15.447,6.550)--(15.267,6.550);
-\node[gp node right] at (2.240,6.550) {$1.94\times10^{11}$};
+\draw[gp path] (2.424,6.973)--(2.604,6.973);
+\draw[gp path] (15.447,6.973)--(15.267,6.973);
+\node[gp node right] at (2.240,6.973) {$1.95\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.455)--(15.447,7.455);
+\draw[gp path] (2.424,7.998)--(15.447,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.455)--(2.604,7.455);
-\draw[gp path] (15.447,7.455)--(15.267,7.455);
-\node[gp node right] at (2.240,7.455) {$1.95\times10^{11}$};
+\draw[gp path] (2.424,7.998)--(2.604,7.998);
+\draw[gp path] (15.447,7.998)--(15.267,7.998);
+\node[gp node right] at (2.240,7.998) {$1.96\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,8.360)--(15.447,8.360);
+\draw[gp path] (2.424,9.024)--(15.447,9.024);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.360)--(2.604,8.360);
-\draw[gp path] (15.447,8.360)--(15.267,8.360);
-\node[gp node right] at (2.240,8.360) {$1.96\times10^{11}$};
+\draw[gp path] (2.424,9.024)--(2.604,9.024);
+\draw[gp path] (15.447,9.024)--(15.267,9.024);
+\node[gp node right] at (2.240,9.024) {$1.97\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.265)--(15.447,9.265);
+\draw[gp path] (2.424,10.049)--(15.447,10.049);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.265)--(2.604,9.265);
-\draw[gp path] (15.447,9.265)--(15.267,9.265);
-\node[gp node right] at (2.240,9.265) {$1.97\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,10.170)--(15.447,10.170);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.170)--(2.604,10.170);
-\draw[gp path] (15.447,10.170)--(15.267,10.170);
-\node[gp node right] at (2.240,10.170) {$1.98\times10^{11}$};
+\draw[gp path] (2.424,10.049)--(2.604,10.049);
+\draw[gp path] (15.447,10.049)--(15.267,10.049);
+\node[gp node right] at (2.240,10.049) {$1.98\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -138,160 +126,197 @@
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(2.424,11.075);
+\draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.424,1.845);
-\draw[gp path] (2.424,11.075)--(2.424,11.255);
+\draw[gp path] (2.424,1.845)--(2.424,2.025);
+\draw[gp path] (2.424,11.075)--(2.424,10.895);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.595,2.025)--(4.595,11.075);
+\draw[gp path] (4.052,1.845)--(4.052,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.595,2.025)--(4.595,1.845);
-\draw[gp path] (4.595,11.075)--(4.595,11.255);
-\node[gp node left,rotate=270] at (4.595,1.661) {$50$};
+\draw[gp path] (4.052,1.845)--(4.052,2.025);
+\draw[gp path] (4.052,11.075)--(4.052,10.895);
+\node[gp node left,rotate=270] at (4.052,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.765,2.025)--(6.765,11.075);
+\draw[gp path] (5.680,1.845)--(5.680,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.765,2.025)--(6.765,1.845);
-\draw[gp path] (6.765,11.075)--(6.765,11.255);
-\node[gp node left,rotate=270] at (6.765,1.661) {$100$};
+\draw[gp path] (5.680,1.845)--(5.680,2.025);
+\draw[gp path] (5.680,11.075)--(5.680,10.895);
+\node[gp node left,rotate=270] at (5.680,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.936,2.025)--(8.936,11.075);
+\draw[gp path] (7.308,1.845)--(7.308,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.936,2.025)--(8.936,1.845);
-\draw[gp path] (8.936,11.075)--(8.936,11.255);
-\node[gp node left,rotate=270] at (8.936,1.661) {$150$};
+\draw[gp path] (7.308,1.845)--(7.308,2.025);
+\draw[gp path] (7.308,11.075)--(7.308,10.895);
+\node[gp node left,rotate=270] at (7.308,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.106,2.025)--(11.106,11.075);
+\draw[gp path] (8.936,1.845)--(8.936,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.106,2.025)--(11.106,1.845);
-\draw[gp path] (11.106,11.075)--(11.106,11.255);
-\node[gp node left,rotate=270] at (11.106,1.661) {$200$};
+\draw[gp path] (8.936,1.845)--(8.936,2.025);
+\draw[gp path] (8.936,11.075)--(8.936,10.895);
+\node[gp node left,rotate=270] at (8.936,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.277,2.025)--(13.277,11.075);
+\draw[gp path] (10.563,1.845)--(10.563,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.277,2.025)--(13.277,1.845);
-\draw[gp path] (13.277,11.075)--(13.277,11.255);
-\node[gp node left,rotate=270] at (13.277,1.661) {$250$};
+\draw[gp path] (10.563,1.845)--(10.563,2.025);
+\draw[gp path] (10.563,11.075)--(10.563,10.895);
+\node[gp node left,rotate=270] at (10.563,1.661) {$250$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (15.447,2.025)--(15.447,11.075);
+\draw[gp path] (12.191,1.845)--(12.191,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,2.025)--(15.447,1.845);
-\draw[gp path] (15.447,11.075)--(15.447,11.255);
-\node[gp node left,rotate=270] at (15.447,1.661) {$300$};
-\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
+\draw[gp path] (12.191,1.845)--(12.191,2.025);
+\draw[gp path] (12.191,11.075)--(12.191,10.895);
+\node[gp node left,rotate=270] at (12.191,1.661) {$300$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (13.819,1.845)--(13.819,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (13.819,1.845)--(13.819,2.025);
+\draw[gp path] (13.819,11.075)--(13.819,10.895);
+\node[gp node left,rotate=270] at (13.819,1.661) {$350$};
+\gpcolor{color=gp lt color axes}
+\gpsetlinetype{gp lt axes}
+\gpsetdashtype{gp dt axes}
+\gpsetlinewidth{0.50}
+\draw[gp path] (15.447,1.845)--(15.447,11.075);
+\gpcolor{color=gp lt color border}
+\gpsetlinetype{gp lt border}
+\gpsetdashtype{gp dt solid}
+\gpsetlinewidth{1.00}
+\draw[gp path] (15.447,1.845)--(15.447,2.025);
+\draw[gp path] (15.447,11.075)--(15.447,10.895);
+\node[gp node left,rotate=270] at (15.447,1.661) {$400$};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,9.859)--(2.424,9.744)--(2.424,9.495)--(2.467,9.477)--(2.467,9.435)%
-  --(2.467,9.336)--(2.467,9.233)--(2.511,9.119)--(2.511,9.027)--(2.511,8.967)--(2.554,8.913)%
-  --(2.554,8.877)--(2.554,8.797)--(2.554,8.666)--(2.554,8.578)--(2.598,8.498)--(2.598,8.493)%
-  --(2.598,8.434)--(2.641,8.409)--(2.641,8.384)--(2.641,8.204)--(2.684,8.131)--(2.684,7.984)%
-  --(2.684,7.899)--(2.684,7.870)--(2.728,7.843)--(2.728,7.717)--(2.728,7.614)--(2.728,7.571)%
-  --(2.771,7.543)--(2.771,7.513)--(2.771,7.485)--(2.771,7.403)--(2.815,7.384)--(2.815,7.379)%
-  --(2.858,7.202)--(2.858,6.998)--(2.902,6.990)--(2.902,6.876)--(2.945,6.869)--(2.945,6.867)%
-  --(2.988,6.717)--(2.988,6.673)--(3.032,6.646)--(3.032,6.593)--(3.075,6.593)--(3.119,6.560)%
-  --(3.162,6.539)--(3.162,6.532)--(3.249,6.526)--(3.292,6.499)--(3.336,6.496)--(3.336,6.494)%
-  --(3.379,6.480)--(3.422,6.470)--(3.422,6.431)--(3.466,6.410)--(3.509,6.403)--(3.553,6.384)%
-  --(3.596,6.377)--(3.639,6.365)--(3.639,6.362)--(3.639,6.323)--(3.683,6.300)--(3.726,6.293)%
-  --(3.726,6.240)--(3.770,6.233)--(3.770,6.208)--(3.770,6.190)--(3.813,6.170)--(3.857,6.137)%
-  --(3.943,6.132)--(3.943,6.124)--(4.030,6.101)--(4.074,6.101)--(4.074,6.074)--(4.117,6.005)%
-  --(4.117,5.987)--(4.160,5.961)--(4.160,5.952)--(4.160,5.932)--(4.204,5.878)--(4.204,5.876)%
-  --(4.204,5.875)--(4.247,5.875)--(4.291,5.870)--(4.377,5.857)--(4.377,5.855)--(4.421,5.836)%
-  --(4.464,5.823)--(4.464,5.802)--(4.508,5.795)--(4.638,5.788)--(4.812,10.763)--(4.855,8.427)%
-  --(4.855,8.293)--(4.855,8.278)--(4.898,8.066)--(4.898,8.003)--(4.898,7.955)--(4.898,7.930)%
-  --(4.898,7.806)--(4.898,7.767)--(4.942,7.614)--(4.942,7.596)--(4.942,7.429)--(4.942,7.389)%
-  --(4.985,7.285)--(4.985,7.268)--(4.985,7.223)--(4.985,7.203)--(4.985,7.176)--(5.029,7.127)%
-  --(5.029,7.089)--(5.072,7.072)--(5.072,7.041)--(5.072,7.005)--(5.072,6.851)--(5.072,6.811)%
-  --(5.115,6.647)--(5.115,6.559)--(5.115,6.523)--(5.115,6.522)--(5.159,6.492)--(5.202,6.428)%
-  --(5.246,6.247)--(5.246,6.021)--(5.246,5.976)--(5.289,5.944)--(5.332,5.916)--(5.332,5.897)%
-  --(5.332,5.875)--(5.332,5.758)--(5.376,5.658)--(5.376,5.634)--(5.419,5.633)--(5.419,5.477)%
-  --(5.463,5.455)--(5.463,5.438)--(5.463,5.355)--(5.506,5.352)--(5.506,5.345)--(5.506,5.307)%
-  --(5.550,5.307)--(5.550,5.298)--(5.550,5.280)--(5.550,5.224)--(5.593,5.198)--(5.636,5.142)%
-  --(5.636,5.113)--(5.680,5.112)--(5.680,5.067)--(5.723,5.024)--(5.767,5.014)--(5.810,4.999)%
-  --(5.853,4.938)--(5.853,4.902)--(5.897,4.885)--(5.940,4.881)--(5.940,4.867)--(5.940,4.865)%
-  --(5.984,4.864)--(6.027,4.860)--(6.070,4.851)--(6.114,4.847)--(6.157,4.811)--(6.244,4.803)%
-  --(6.244,4.785)--(6.331,4.758)--(6.331,4.753)--(6.374,4.714)--(6.505,4.683)--(6.505,4.679)%
-  --(6.635,4.665)--(6.722,4.665)--(6.765,4.650)--(6.808,4.615)--(6.852,4.606)--(6.982,4.605)%
-  --(7.025,4.571)--(7.156,4.540)--(7.243,4.537)--(7.329,4.534)--(7.373,4.513)--(7.416,8.009)%
-  --(7.416,6.138)--(7.460,5.944)--(7.460,5.719)--(7.460,5.580)--(7.460,5.518)--(7.503,5.517)%
-  --(7.546,5.509)--(7.546,5.036)--(7.546,4.986)--(7.546,4.952)--(7.546,4.947)--(7.590,4.914)%
-  --(7.590,4.886)--(7.590,4.728)--(7.590,4.700)--(7.633,4.689)--(7.633,4.659)--(7.633,4.620)%
-  --(7.633,4.616)--(7.677,4.534)--(7.677,4.509)--(7.677,4.471)--(7.720,4.466)--(7.763,4.314)%
-  --(7.763,4.257)--(7.850,4.203)--(7.850,4.196)--(7.894,4.173)--(7.894,4.144)--(7.894,4.134)%
-  --(7.937,4.127)--(7.937,4.065)--(7.980,3.927)--(7.980,3.904)--(8.024,3.880)--(8.067,3.876)%
-  --(8.067,3.865)--(8.111,3.807)--(8.111,3.794)--(8.111,3.767)--(8.111,3.732)--(8.154,3.727)%
-  --(8.154,3.692)--(8.154,3.643)--(8.198,3.631)--(8.198,3.603)--(8.241,3.510)--(8.284,3.458)%
-  --(8.284,3.451)--(8.328,3.367)--(8.371,3.333)--(8.501,3.331)--(8.632,3.325)--(8.632,3.320)%
-  --(8.675,3.291)--(8.718,3.273)--(8.762,3.264)--(8.805,3.234)--(8.805,3.229)--(8.892,3.202)%
-  --(9.153,3.194)--(9.239,3.193)--(9.370,3.187)--(9.456,3.166)--(9.587,3.161)--(9.630,3.153)%
-  --(9.630,3.146)--(9.673,3.121)--(9.717,3.084)--(9.717,3.064)--(9.934,3.052)--(9.977,3.024)%
-  --(10.064,6.357)--(10.064,4.733)--(10.064,4.717)--(10.108,4.686)--(10.151,4.533)--(10.151,4.523)%
-  --(10.151,4.520)--(10.151,4.407)--(10.194,4.317)--(10.194,4.270)--(10.194,4.253)--(10.238,4.101)%
-  --(10.238,4.055)--(10.238,4.034)--(10.281,3.922)--(10.281,3.902)--(10.325,3.869)--(10.368,3.845)%
-  --(10.368,3.843)--(10.411,3.832)--(10.411,3.802)--(10.411,3.776)--(10.455,3.672)--(10.498,3.637)%
-  --(10.542,3.596)--(10.542,3.499)--(10.585,3.480)--(10.585,3.474)--(10.628,3.404)--(10.628,3.380)%
-  --(10.672,3.368)--(10.672,3.359)--(10.715,3.291)--(10.715,3.282)--(10.759,3.258)--(10.889,3.207)%
-  --(10.932,3.190)--(11.063,3.177)--(11.149,3.168)--(11.193,3.167)--(11.193,3.150)--(11.236,3.133)%
-  --(11.280,3.116)--(11.280,3.115)--(11.366,3.091)--(11.410,3.090)--(11.410,3.086)--(11.497,3.071)%
-  --(11.497,3.058)--(11.540,3.053)--(11.540,3.045)--(11.584,3.037)--(11.670,3.024)--(11.801,3.019)%
-  --(11.801,3.015)--(11.844,2.995)--(11.887,2.975)--(11.931,2.936)--(12.061,2.912)--(12.191,2.894)%
-  --(12.235,2.881)--(12.408,2.863)--(12.452,2.740)--(12.669,2.729)--(12.669,5.753)--(12.712,4.495)%
-  --(12.756,4.463)--(12.756,4.410)--(12.842,4.330)--(12.886,4.320)--(12.886,4.109)--(13.016,4.093)%
-  --(13.103,4.090)--(13.103,4.088)--(13.146,4.007)--(13.146,3.987)--(13.190,3.982)--(13.190,3.974)%
-  --(13.233,3.920)--(13.233,3.890)--(13.277,3.851)--(13.320,3.787)--(13.320,3.781)--(13.363,3.776)%
-  --(13.450,3.728)--(13.450,3.682)--(13.450,3.676)--(13.494,3.665)--(13.494,3.617)--(13.537,3.586)%
-  --(13.537,3.474)--(13.580,3.472)--(13.580,3.442)--(13.624,3.439)--(13.754,3.418)--(13.754,3.391)%
-  --(13.797,3.278)--(13.797,3.276)--(13.797,3.224)--(13.884,3.186)--(13.884,3.177)--(14.014,3.171)%
-  --(14.058,3.167)--(14.058,3.143)--(14.101,3.119)--(14.145,3.115)--(14.145,3.091)--(14.232,3.071)%
-  --(14.449,3.018)--(14.449,3.014)--(14.535,3.007)--(14.622,2.999)--(14.622,2.998)--(14.666,2.896)%
-  --(14.709,2.886)--(14.796,2.858)--(14.839,2.849)--(14.883,2.847)--(14.926,2.832)--(14.969,2.826)%
-  --(14.969,2.802)--(15.056,2.798)--(15.100,2.779)--(15.100,2.776)--(15.273,5.759)--(15.273,4.946);
+\draw[gp path] (2.424,9.939)--(2.424,9.795)--(2.424,9.751)--(2.424,9.617)--(2.424,9.479)%
+  --(2.457,9.379)--(2.457,9.158)--(2.457,9.036)--(2.457,8.898)--(2.457,8.827)--(2.457,8.596)%
+  --(2.489,8.500)--(2.489,8.411)--(2.489,8.397)--(2.489,8.381)--(2.522,8.322)--(2.522,8.140)%
+  --(2.522,8.063)--(2.522,7.990)--(2.522,7.783)--(2.554,7.707)--(2.554,7.581)--(2.554,7.556)%
+  --(2.587,7.408)--(2.587,7.363)--(2.587,7.253)--(2.587,7.111)--(2.587,7.021)--(2.619,6.862)%
+  --(2.619,6.802)--(2.619,6.772)--(2.619,6.704)--(2.652,6.605)--(2.652,6.591)--(2.652,6.567)%
+  --(2.652,6.413)--(2.684,6.412)--(2.717,6.400)--(2.717,6.396)--(2.717,6.317)--(2.717,6.297)%
+  --(2.750,6.153)--(2.750,6.145)--(2.782,6.120)--(2.815,6.082)--(2.815,6.073)--(2.815,6.042)%
+  --(2.847,5.985)--(2.847,5.980)--(2.847,5.787)--(2.880,5.778)--(2.880,5.777)--(2.880,5.649)%
+  --(2.880,5.586)--(2.912,5.573)--(3.010,5.485)--(3.010,5.471)--(3.043,5.463)--(3.043,5.447)%
+  --(3.075,5.405)--(3.108,5.398)--(3.140,5.383)--(3.303,5.376)--(3.336,5.362)--(3.336,5.347)%
+  --(3.368,5.317)--(3.368,5.308)--(3.368,5.294)--(3.401,5.281)--(3.433,5.281)--(3.433,5.253)%
+  --(3.433,5.240)--(3.466,5.201)--(3.498,5.187)--(3.498,5.178)--(3.531,5.166)--(3.531,5.145)%
+  --(3.564,5.138)--(3.629,5.123)--(3.661,5.101)--(3.694,5.089)--(3.726,5.074)--(3.889,5.048)%
+  --(3.889,5.035)--(3.922,5.003)--(3.987,4.967)--(4.019,4.937)--(4.052,4.917)--(4.084,4.901)%
+  --(4.117,4.874)--(4.150,4.862)--(4.182,4.861)--(4.280,4.845)--(4.280,10.422)--(4.312,7.665)%
+  --(4.312,7.481)--(4.312,7.398)--(4.312,7.380)--(4.312,7.318)--(4.345,7.141)--(4.345,6.980)%
+  --(4.345,6.890)--(4.345,6.845)--(4.377,6.824)--(4.377,6.764)--(4.377,6.473)--(4.377,6.440)%
+  --(4.377,6.163)--(4.410,6.106)--(4.410,6.092)--(4.410,6.083)--(4.410,5.999)--(4.443,5.998)%
+  --(4.475,5.994)--(4.508,5.972)--(4.508,5.930)--(4.508,5.849)--(4.508,5.807)--(4.508,5.744)%
+  --(4.540,5.730)--(4.540,5.623)--(4.540,5.575)--(4.573,5.561)--(4.573,5.534)--(4.573,5.386)%
+  --(4.573,5.369)--(4.605,5.365)--(4.605,5.071)--(4.638,5.056)--(4.638,4.988)--(4.638,4.951)%
+  --(4.638,4.938)--(4.670,4.892)--(4.670,4.842)--(4.670,4.815)--(4.703,4.805)--(4.703,4.754)%
+  --(4.736,4.745)--(4.768,4.693)--(4.768,4.666)--(4.768,4.657)--(4.866,4.654)--(4.931,4.641)%
+  --(4.963,4.635)--(4.996,4.578)--(4.996,4.550)--(4.996,4.530)--(5.029,4.525)--(5.126,4.516)%
+  --(5.159,4.190)--(5.159,4.151)--(5.191,4.111)--(5.257,4.089)--(5.354,4.071)--(5.387,4.053)%
+  --(5.419,4.022)--(5.419,4.018)--(5.452,4.000)--(5.452,3.995)--(5.484,3.951)--(5.484,3.938)%
+  --(5.484,3.928)--(5.517,3.920)--(5.550,3.905)--(5.582,3.884)--(5.615,3.876)--(5.615,3.836)%
+  --(5.647,3.723)--(5.680,3.718)--(5.712,3.699)--(5.745,3.692)--(5.745,3.679)--(5.875,3.658)%
+  --(5.875,3.654)--(5.908,3.623)--(5.973,3.605)--(5.973,3.590)--(6.005,3.585)--(6.038,3.565)%
+  --(6.038,3.559)--(6.070,3.536)--(6.168,3.528)--(6.233,3.523)--(6.233,3.496)--(6.266,3.484)%
+  --(6.266,7.497)--(6.266,5.430)--(6.266,5.399)--(6.298,5.396)--(6.298,5.230)--(6.298,5.186)%
+  --(6.298,5.024)--(6.298,5.012)--(6.331,4.951)--(6.331,4.897)--(6.331,4.810)--(6.363,4.686)%
+  --(6.363,4.653)--(6.396,4.584)--(6.396,4.535)--(6.396,4.223)--(6.396,4.189)--(6.429,4.139)%
+  --(6.461,4.112)--(6.494,3.841)--(6.494,3.828)--(6.526,3.713)--(6.526,3.657)--(6.526,3.646)%
+  --(6.526,3.643)--(6.559,3.489)--(6.559,3.406)--(6.559,3.357)--(6.591,3.335)--(6.591,3.290)%
+  --(6.656,3.267)--(6.656,3.239)--(6.689,3.211)--(6.689,3.183)--(6.722,3.166)--(6.722,3.164)%
+  --(6.754,3.129)--(6.787,3.024)--(6.787,3.023)--(6.819,3.023)--(6.852,2.992)--(6.917,2.992)%
+  --(6.917,2.947)--(6.917,2.911)--(6.917,2.895)--(6.949,2.894)--(6.949,2.865)--(6.982,2.850)%
+  --(7.047,2.848)--(7.112,2.821)--(7.112,2.794)--(7.112,2.770)--(7.210,2.767)--(7.243,2.708)%
+  --(7.340,2.693)--(7.340,2.677)--(7.373,2.670)--(7.405,2.640)--(7.438,2.581)--(7.438,2.562)%
+  --(7.536,2.530)--(7.536,2.488)--(7.568,2.477)--(7.666,2.412)--(7.698,2.395)--(7.763,2.381)%
+  --(7.796,2.343)--(8.122,2.332)--(8.187,2.321)--(8.219,2.319)--(8.219,6.017)--(8.219,4.014)%
+  --(8.219,3.985)--(8.252,3.781)--(8.252,3.727)--(8.252,3.725)--(8.284,3.627)--(8.349,3.563)%
+  --(8.349,3.511)--(8.382,3.304)--(8.415,3.258)--(8.415,3.191)--(8.447,3.178)--(8.447,3.164)%
+  --(8.480,3.155)--(8.480,3.144)--(8.480,3.051)--(8.480,3.041)--(8.512,3.038)--(8.545,3.031)%
+  --(8.577,3.001)--(8.610,2.999)--(8.610,2.968)--(8.642,2.914)--(8.675,2.864)--(8.708,2.843)%
+  --(8.708,2.807)--(8.708,2.801)--(8.708,2.722)--(8.740,2.721)--(8.740,2.697)--(8.740,2.631)%
+  --(8.740,2.611)--(8.773,2.595)--(8.805,2.550)--(8.903,2.533)--(8.968,2.510)--(9.098,2.486)%
+  --(9.131,2.485)--(9.163,2.435)--(9.196,2.408)--(9.229,2.390)--(9.229,2.355)--(9.294,2.151)%
+  --(9.326,2.136)--(9.359,2.119)--(9.391,2.110)--(9.424,2.099)--(9.424,2.096)--(9.456,2.055)%
+  --(9.522,2.040)--(9.749,2.036)--(9.749,2.014)--(9.782,1.993)--(9.782,1.989)--(9.912,1.968)%
+  --(9.945,1.963)--(10.140,1.952)--(10.140,1.926)--(10.173,1.906)--(10.173,5.411)--(10.173,4.006)%
+  --(10.205,3.994)--(10.205,3.831)--(10.205,3.733)--(10.238,3.728)--(10.270,3.719)--(10.303,3.705)%
+  --(10.335,3.698)--(10.335,3.683)--(10.368,3.673)--(10.368,3.669)--(10.433,3.527)--(10.433,3.462)%
+  --(10.466,3.428)--(10.466,3.419)--(10.466,3.403)--(10.466,3.322)--(10.498,3.302)--(10.498,3.298)%
+  --(10.531,3.253)--(10.531,3.154)--(10.531,3.116)--(10.563,3.091)--(10.563,3.043)--(10.563,3.035)%
+  --(10.563,2.974)--(10.596,2.967)--(10.596,2.851)--(10.596,2.789)--(10.628,2.668)--(10.661,2.542)%
+  --(10.694,2.539)--(10.726,2.524)--(10.759,2.520)--(10.791,2.519)--(10.791,2.497)--(10.824,2.490)%
+  --(10.856,2.459)--(10.856,2.453)--(10.889,2.450)--(10.889,2.413)--(10.922,2.389)--(11.084,2.378)%
+  --(11.084,2.325)--(11.117,2.301)--(11.149,2.293)--(11.149,2.282)--(11.215,2.250)--(11.280,2.250)%
+  --(11.312,2.241)--(11.410,2.225)--(11.410,2.218)--(11.442,2.200)--(11.475,2.197)--(11.508,2.174)%
+  --(11.508,2.171)--(11.605,2.165)--(11.833,2.149)--(11.833,2.147)--(11.866,2.135)--(12.126,2.061)%
+  --(12.126,5.302)--(12.159,4.385)--(12.159,4.375)--(12.159,4.357)--(12.191,4.356)--(12.224,4.352)%
+  --(12.224,4.308)--(12.224,4.285)--(12.224,4.266)--(12.256,4.228)--(12.289,4.205)--(12.289,4.186)%
+  --(12.289,4.180)--(12.321,4.172)--(12.321,4.138)--(12.354,4.108)--(12.354,4.033)--(12.387,3.934)%
+  --(12.387,3.835)--(12.419,3.824)--(12.419,3.807)--(12.419,3.766)--(12.452,3.668)--(12.452,3.629)%
+  --(12.484,3.622)--(12.517,3.613)--(12.517,3.595)--(12.517,3.556)--(12.582,3.543)--(12.614,3.528)%
+  --(12.614,3.502)--(12.647,3.480)--(12.680,3.421)--(12.680,3.420)--(12.712,3.407)--(12.712,3.377)%
+  --(12.712,3.375)--(12.745,3.340)--(12.745,3.291)--(12.745,3.278)--(12.810,3.263)--(12.810,3.236)%
+  --(12.908,3.232)--(12.973,3.119)--(12.973,3.101)--(12.973,3.087)--(13.005,3.046)--(13.005,2.996)%
+  --(13.038,2.967)--(13.038,2.957)--(13.070,2.945)--(13.103,2.942)--(13.168,2.938)--(13.233,2.936)%
+  --(13.266,2.918)--(13.266,2.914)--(13.266,2.909)--(13.298,2.900)--(13.331,2.759)--(13.428,2.748)%
+  --(13.428,2.737)--(13.494,2.735)--(13.494,2.705)--(13.559,2.697)--(13.656,2.673)--(13.656,2.666)%
+  --(13.754,2.651)--(13.754,2.640)--(13.787,2.630)--(13.787,2.602)--(13.819,2.592)--(13.819,2.588)%
+  --(13.819,2.586)--(13.852,2.551)--(13.884,2.543)--(13.884,2.541)--(13.917,2.538)--(13.982,2.529)%
+  --(14.014,2.516)--(14.014,2.498)--(14.080,2.483)--(14.080,2.465);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,6.550) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time [S]};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
+\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.025cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
