--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_addition_plot.tex
@@ -1,6 +1,6 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Fri 06 Dec 2024 09:54:07 AM UTC
+%% Mon 09 Dec 2024 12:58:31 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
@@ -13,7 +13,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,1.845)--(2.604,1.845);
 \draw[gp path] (15.447,1.845)--(15.267,1.845);
-\node[gp node right] at (2.240,1.845) {$1.86\times10^{11}$};
+\node[gp node right] at (2.240,1.845) {$1.8\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -25,7 +25,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,3.383)--(2.604,3.383);
 \draw[gp path] (15.447,3.383)--(15.267,3.383);
-\node[gp node right] at (2.240,3.383) {$1.88\times10^{11}$};
+\node[gp node right] at (2.240,3.383) {$1.85\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -49,7 +49,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,6.460)--(2.604,6.460);
 \draw[gp path] (15.447,6.460)--(15.267,6.460);
-\node[gp node right] at (2.240,6.460) {$1.92\times10^{11}$};
+\node[gp node right] at (2.240,6.460) {$1.95\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -61,7 +61,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,7.998)--(2.604,7.998);
 \draw[gp path] (15.447,7.998)--(15.267,7.998);
-\node[gp node right] at (2.240,7.998) {$1.94\times10^{11}$};
+\node[gp node right] at (2.240,7.998) {$2\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -73,7 +73,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,9.537)--(2.604,9.537);
 \draw[gp path] (15.447,9.537)--(15.267,9.537);
-\node[gp node right] at (2.240,9.537) {$1.96\times10^{11}$};
+\node[gp node right] at (2.240,9.537) {$2.05\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -85,7 +85,7 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$1.98\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2.1\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -197,53 +197,60 @@
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.820)--(2.424,10.725)--(2.424,10.612)--(2.457,10.547)--(2.457,10.512)%
-  --(2.457,10.471)--(2.457,10.229)--(2.457,10.161)--(2.489,10.157)--(2.489,10.070)--(2.489,9.900)%
-  --(2.489,9.898)--(2.489,9.770)--(2.489,9.609)--(2.489,9.549)--(2.522,9.542)--(2.522,9.523)%
-  --(2.522,9.503)--(2.522,9.473)--(2.522,9.439)--(2.554,9.404)--(2.554,9.289)--(2.554,9.267)%
-  --(2.554,9.210)--(2.554,9.204)--(2.587,9.198)--(2.587,9.148)--(2.587,9.075)--(2.587,8.967)%
-  --(2.587,8.953)--(2.619,8.917)--(2.619,8.706)--(2.619,8.679)--(2.619,8.650)--(2.652,8.634)%
-  --(2.652,8.591)--(2.652,8.549)--(2.652,8.522)--(2.652,8.485)--(2.684,8.484)--(2.684,8.444)%
-  --(2.684,8.417)--(2.717,8.387)--(2.717,8.366)--(2.717,8.320)--(2.750,8.316)--(2.750,8.288)%
-  --(2.750,8.278)--(2.750,8.182)--(2.782,8.133)--(2.782,8.113)--(2.815,8.109)--(2.815,8.076)%
-  --(2.815,8.070)--(2.847,8.061)--(2.880,8.054)--(2.912,8.023)--(2.912,7.990)--(2.912,7.986)%
-  --(2.912,7.983)--(2.912,7.975)--(2.945,7.954)--(2.945,7.933)--(2.945,7.929)--(2.945,7.910)%
-  --(2.977,7.886)--(2.977,7.739)--(3.010,7.711)--(3.043,7.701)--(3.043,7.695)--(3.075,7.620)%
-  --(3.108,7.620)--(3.140,7.578)--(3.238,7.568)--(3.303,7.547)--(3.303,7.545)--(3.336,7.544)%
-  --(3.336,7.535)--(3.368,7.534)--(3.401,7.516)--(3.401,7.515)--(3.433,7.511)--(3.466,7.504)%
-  --(3.531,7.481)--(3.564,7.481)--(3.564,7.463)--(3.596,7.451)--(3.596,7.431)--(3.629,7.413)%
-  --(3.629,7.407)--(3.661,7.403)--(3.726,7.394)--(3.726,7.381)--(3.759,7.378)--(3.759,7.369)%
-  --(3.759,7.351)--(3.824,7.329)--(3.857,7.312)--(3.987,7.302)--(3.987,7.275)--(4.019,7.266)%
-  --(4.052,7.264)--(4.150,7.250)--(4.215,7.218)--(4.312,7.202)--(4.345,7.202)--(4.410,7.194)%
-  --(4.410,7.188)--(4.475,7.181)--(4.508,7.173)--(4.573,7.161)--(4.768,7.157)--(4.801,7.154)%
-  --(4.833,7.147)--(4.898,7.140)--(4.931,7.140)--(4.963,7.134)--(4.963,7.128)--(4.996,7.122)%
-  --(5.061,7.116)--(5.061,7.115)--(5.094,7.111)--(5.094,7.101)--(5.354,7.093)--(5.387,7.092)%
-  --(5.550,7.090)--(5.550,7.087)--(5.550,7.082)--(5.647,5.163)--(5.647,5.078)--(5.647,5.039)%
-  --(5.647,5.017)--(5.680,4.961)--(5.680,4.917)--(5.680,4.638)--(5.680,4.576)--(5.680,4.530)%
-  --(5.680,4.499)--(5.712,4.470)--(5.712,4.447)--(5.712,4.444)--(5.745,4.430)--(5.745,4.427)%
-  --(5.745,4.393)--(5.777,4.372)--(5.777,4.356)--(5.777,4.344)--(5.777,4.324)--(5.777,4.297)%
-  --(5.810,4.066)--(5.810,4.063)--(5.810,4.059)--(5.810,3.887)--(5.843,3.872)--(5.875,3.573)%
-  --(5.875,3.566)--(5.875,3.558)--(5.875,3.324)--(5.908,3.318)--(5.973,3.301)--(6.005,3.132)%
-  --(6.070,3.122)--(6.070,3.116)--(6.103,3.106)--(6.136,3.098)--(6.136,2.947)--(6.168,2.945)%
-  --(6.201,2.939)--(6.233,2.927)--(6.233,2.922)--(6.266,2.913)--(6.266,2.899)--(6.266,2.885)%
-  --(6.266,2.870)--(6.298,2.858)--(6.331,2.849)--(6.363,2.842)--(6.363,2.837)--(6.396,2.827)%
-  --(6.429,2.796)--(6.494,2.789)--(6.526,2.786)--(6.559,2.778)--(6.559,2.771)--(6.559,2.755)%
-  --(6.689,2.751)--(6.689,2.629)--(6.689,2.619)--(6.787,2.612)--(6.819,2.609)--(7.015,2.607)%
-  --(7.047,2.605)--(7.080,2.602)--(7.177,2.598)--(7.275,2.592)--(7.308,2.590)--(7.340,2.587)%
-  --(7.373,2.416)--(7.601,2.405)--(7.666,2.400)--(7.991,2.389)--(8.089,2.386)--(8.089,2.380)%
-  --(8.187,2.375)--(8.284,2.374)--(8.317,2.372)--(8.349,2.364)--(8.382,2.360)--(8.415,2.334)%
-  --(8.415,2.331)--(8.480,2.321)--(8.577,2.321)--(8.610,2.318)--(8.740,2.292)--(8.740,2.287)%
-  --(8.870,2.282)--(8.903,2.282)--(8.936,2.277)--(9.131,2.274)--(9.261,2.265)--(9.359,2.262)%
-  --(9.522,2.256)--(9.684,2.254)--(9.815,2.248)--(9.945,2.233)--(9.977,2.231)--(10.010,2.224)%
-  --(10.042,2.220)--(10.075,2.219)--(10.173,2.215)--(10.238,2.208)--(10.335,2.207)--(10.335,2.202)%
-  --(10.401,2.195)--(11.052,2.189)--(11.182,2.187)--(11.247,2.183)--(11.247,2.178)--(11.996,2.171)%
-  --(12.159,2.171)--(12.647,2.168)--(12.647,2.166)--(12.680,2.159)--(13.038,2.153)--(13.396,2.147)%
-  --(13.721,2.144)--(13.949,2.140);
+\draw[gp path] (2.424,7.195)--(2.424,7.158)--(2.424,7.136)--(2.457,7.050)--(2.457,7.011)%
+  --(2.457,7.003)--(2.457,6.986)--(2.489,6.966)--(2.489,6.868)--(2.522,6.843)--(2.522,6.819)%
+  --(2.522,6.808)--(2.522,6.807)--(2.554,6.773)--(2.554,6.757)--(2.554,6.733)--(2.554,6.721)%
+  --(2.554,6.697)--(2.587,6.677)--(2.587,6.664)--(2.587,6.640)--(2.587,6.619)--(2.587,6.609)%
+  --(2.619,6.546)--(2.619,6.503)--(2.619,6.498)--(2.652,6.481)--(2.652,6.474)--(2.652,6.455)%
+  --(2.652,6.452)--(2.652,6.423)--(2.684,6.422)--(2.684,6.412)--(2.684,6.392)--(2.717,6.383)%
+  --(2.717,6.371)--(2.717,6.369)--(2.750,6.352)--(2.750,6.316)--(2.750,6.302)--(2.750,6.294)%
+  --(2.782,6.292)--(2.782,6.272)--(2.815,6.271)--(2.815,6.268)--(2.815,6.254)--(2.847,6.249)%
+  --(2.847,6.244)--(2.880,6.243)--(2.880,6.208)--(2.880,6.197)--(2.912,6.194)--(2.945,6.164)%
+  --(2.945,6.157)--(2.945,6.155)--(2.977,6.137)--(2.977,6.126)--(2.977,6.124)--(3.010,6.118)%
+  --(3.043,6.109)--(3.043,6.103)--(3.075,6.097)--(3.108,6.084)--(3.173,6.070)--(3.205,6.063)%
+  --(3.205,6.057)--(3.270,6.057)--(3.270,6.056)--(3.336,6.053)--(3.336,6.047)--(3.368,6.038)%
+  --(3.401,6.035)--(3.401,6.028)--(3.433,6.023)--(3.433,6.018)--(3.433,6.008)--(3.466,6.000)%
+  --(3.498,5.998)--(3.498,5.995)--(3.531,5.987)--(3.564,5.976)--(3.564,5.964)--(3.596,5.961)%
+  --(3.694,5.955)--(3.726,5.950)--(3.726,5.945)--(3.759,5.945)--(3.824,5.941)--(3.857,5.937)%
+  --(3.889,5.937)--(3.987,5.931)--(4.019,5.916)--(4.052,5.914)--(4.052,5.913)--(4.150,5.911)%
+  --(4.215,5.909)--(4.215,5.908)--(4.247,5.907)--(4.280,5.902)--(4.312,5.899)--(4.377,5.889)%
+  --(4.475,5.888)--(4.475,5.885)--(4.540,5.881)--(4.573,5.873)--(4.605,5.871)--(4.638,5.870)%
+  --(4.670,5.870)--(4.670,5.869)--(4.703,5.866)--(4.703,5.865)--(4.801,5.864)--(4.931,5.854)%
+  --(4.996,5.851)--(4.996,5.846)--(4.996,5.840)--(5.061,5.835)--(5.191,5.826)--(5.224,5.820)%
+  --(5.419,5.816)--(5.517,5.816)--(5.517,5.815)--(5.550,5.806)--(5.615,10.864)--(5.615,10.863)%
+  --(5.647,10.862)--(6.201,10.833)--(6.298,10.832)--(6.396,10.832)--(6.949,10.832)--(8.870,6.448)%
+  --(8.870,6.436)--(8.870,6.434)--(8.903,6.410)--(8.903,6.408)--(8.903,6.393)--(8.936,6.379)%
+  --(8.936,6.373)--(8.936,6.335)--(8.936,6.326)--(8.936,6.316)--(8.968,6.298)--(8.968,6.283)%
+  --(9.001,6.269)--(9.001,6.252)--(9.001,6.241)--(9.001,6.236)--(9.033,6.206)--(9.033,6.202)%
+  --(9.066,6.198)--(9.098,6.192)--(9.098,6.183)--(9.131,6.181)--(9.131,6.157)--(9.163,6.105)%
+  --(9.163,6.103)--(9.196,6.102)--(9.229,6.100)--(9.229,6.090)--(9.261,6.089)--(9.294,6.080)%
+  --(9.326,6.077)--(9.326,6.054)--(9.391,6.049)--(9.424,6.044)--(9.424,6.039)--(9.424,6.038)%
+  --(9.456,6.036)--(9.456,6.030)--(9.489,6.024)--(9.489,6.016)--(9.522,6.016)--(9.522,6.013)%
+  --(9.587,6.008)--(9.587,5.985)--(9.619,5.979)--(9.619,5.976)--(9.684,5.961)--(9.684,5.956)%
+  --(9.717,5.954)--(9.749,5.952)--(9.815,5.944)--(9.847,5.940)--(9.880,5.940)--(9.880,5.936)%
+  --(9.977,5.932)--(10.010,5.919)--(10.042,5.916)--(10.108,5.911)--(10.140,5.909)--(10.205,5.902)%
+  --(10.205,5.891)--(10.205,5.886)--(10.238,5.883)--(10.270,5.878)--(10.335,5.876)--(10.401,5.875)%
+  --(10.498,5.874)--(10.531,5.873)--(10.563,5.873)--(10.596,5.865)--(10.596,5.855)--(10.596,5.847)%
+  --(10.726,5.845)--(10.791,5.841)--(10.824,5.838)--(10.889,5.837)--(11.215,5.834)--(11.280,5.830)%
+  --(11.280,5.828)--(11.345,5.825)--(11.377,5.824)--(11.442,5.823)--(11.475,5.821)--(11.475,5.812)%
+  --(11.508,5.809)--(11.703,5.805)--(11.703,5.798)--(11.768,5.797)--(12.061,5.796)--(12.126,4.461)%
+  --(12.159,4.436)--(12.159,4.394)--(12.159,4.379)--(12.191,4.352)--(12.191,4.324)--(12.224,4.295)%
+  --(12.224,4.289)--(12.224,4.240)--(12.224,4.224)--(12.256,4.209)--(12.256,4.138)--(12.289,4.131)%
+  --(12.289,4.122)--(12.289,4.120)--(12.289,3.942)--(12.321,3.931)--(12.321,3.920)--(12.321,3.913)%
+  --(12.354,3.802)--(12.387,3.787)--(12.387,3.673)--(12.419,3.669)--(12.419,3.666)--(12.419,3.660)%
+  --(12.452,3.656)--(12.452,3.648)--(12.484,3.645)--(12.549,3.644)--(12.549,3.643)--(12.549,3.640)%
+  --(12.582,3.637)--(12.582,3.634)--(12.582,3.628)--(12.614,3.623)--(12.614,3.558)--(12.614,3.431)%
+  --(12.614,3.430)--(12.647,3.424)--(12.647,3.417)--(12.680,3.416)--(12.712,3.408)--(12.712,3.395)%
+  --(12.745,3.386)--(12.745,3.380)--(12.777,3.375)--(12.810,3.371)--(12.810,3.366)--(12.875,3.359)%
+  --(12.940,3.354)--(12.940,3.353)--(12.940,3.343)--(12.940,3.340)--(13.005,3.333)--(13.038,3.332)%
+  --(13.135,3.328)--(13.168,3.316)--(13.298,3.314)--(13.298,3.256)--(13.331,3.253)--(13.363,3.248)%
+  --(13.428,3.247)--(13.526,3.239)--(13.559,3.239)--(13.624,3.229)--(13.656,3.220)--(13.656,3.214)%
+  --(13.819,3.211)--(13.852,3.127)--(13.884,3.121)--(14.047,3.120);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time [S]};
+\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
 \gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
