--- a/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
+++ b/papers/actor-based-large-neighborhood-search/figures/strategic_objective_value_resource_subtraction_plot.tex
@@ -1,139 +1,79 @@
 \tikzpicture[gnuplot]
 %% generated with GNUPLOT 6.0p1 (Lua 5.2; terminal rev. Jun 2020, script rev. 118)
-%% Wed 04 Dec 2024 06:17:47 PM UTC
+%% Mon 09 Dec 2024 01:04:41 PM UTC
 \path (0.000,0.000) rectangle (16.000,12.000);
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(15.447,2.025);
+\draw[gp path] (2.424,1.845)--(15.447,1.845);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.604,2.025);
-\draw[gp path] (15.447,2.025)--(15.267,2.025);
-\node[gp node right] at (2.240,2.025) {$1.78\times10^{11}$};
+\draw[gp path] (2.424,1.845)--(2.604,1.845);
+\draw[gp path] (15.447,1.845)--(15.267,1.845);
+\node[gp node right] at (2.240,1.845) {$1.8\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.848)--(15.447,2.848);
+\draw[gp path] (2.424,3.383)--(15.447,3.383);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.848)--(2.604,2.848);
-\draw[gp path] (15.447,2.848)--(15.267,2.848);
-\node[gp node right] at (2.240,2.848) {$1.8\times10^{11}$};
+\draw[gp path] (2.424,3.383)--(2.604,3.383);
+\draw[gp path] (15.447,3.383)--(15.267,3.383);
+\node[gp node right] at (2.240,3.383) {$1.85\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,3.670)--(15.447,3.670);
+\draw[gp path] (2.424,4.922)--(15.447,4.922);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,3.670)--(2.604,3.670);
-\draw[gp path] (15.447,3.670)--(15.267,3.670);
-\node[gp node right] at (2.240,3.670) {$1.82\times10^{11}$};
+\draw[gp path] (2.424,4.922)--(2.604,4.922);
+\draw[gp path] (15.447,4.922)--(15.267,4.922);
+\node[gp node right] at (2.240,4.922) {$1.9\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,4.493)--(15.447,4.493);
+\draw[gp path] (2.424,6.460)--(15.447,6.460);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,4.493)--(2.604,4.493);
-\draw[gp path] (15.447,4.493)--(15.267,4.493);
-\node[gp node right] at (2.240,4.493) {$1.84\times10^{11}$};
+\draw[gp path] (2.424,6.460)--(2.604,6.460);
+\draw[gp path] (15.447,6.460)--(15.267,6.460);
+\node[gp node right] at (2.240,6.460) {$1.95\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,5.316)--(15.447,5.316);
+\draw[gp path] (2.424,7.998)--(15.447,7.998);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,5.316)--(2.604,5.316);
-\draw[gp path] (15.447,5.316)--(15.267,5.316);
-\node[gp node right] at (2.240,5.316) {$1.86\times10^{11}$};
+\draw[gp path] (2.424,7.998)--(2.604,7.998);
+\draw[gp path] (15.447,7.998)--(15.267,7.998);
+\node[gp node right] at (2.240,7.998) {$2\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.139)--(15.447,6.139);
+\draw[gp path] (2.424,9.537)--(15.447,9.537);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.139)--(2.604,6.139);
-\draw[gp path] (15.447,6.139)--(15.267,6.139);
-\node[gp node right] at (2.240,6.139) {$1.88\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,6.961)--(15.447,6.961);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,6.961)--(2.604,6.961);
-\draw[gp path] (15.447,6.961)--(15.267,6.961);
-\node[gp node right] at (2.240,6.961) {$1.9\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,7.784)--(15.447,7.784);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,7.784)--(2.604,7.784);
-\draw[gp path] (15.447,7.784)--(15.267,7.784);
-\node[gp node right] at (2.240,7.784) {$1.92\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,8.607)--(15.447,8.607);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,8.607)--(2.604,8.607);
-\draw[gp path] (15.447,8.607)--(15.267,8.607);
-\node[gp node right] at (2.240,8.607) {$1.94\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,9.430)--(15.447,9.430);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,9.430)--(2.604,9.430);
-\draw[gp path] (15.447,9.430)--(15.267,9.430);
-\node[gp node right] at (2.240,9.430) {$1.96\times10^{11}$};
-\gpcolor{color=gp lt color axes}
-\gpsetlinetype{gp lt axes}
-\gpsetdashtype{gp dt axes}
-\gpsetlinewidth{0.50}
-\draw[gp path] (2.424,10.252)--(15.447,10.252);
-\gpcolor{color=gp lt color border}
-\gpsetlinetype{gp lt border}
-\gpsetdashtype{gp dt solid}
-\gpsetlinewidth{1.00}
-\draw[gp path] (2.424,10.252)--(2.604,10.252);
-\draw[gp path] (15.447,10.252)--(15.267,10.252);
-\node[gp node right] at (2.240,10.252) {$1.98\times10^{11}$};
+\draw[gp path] (2.424,9.537)--(2.604,9.537);
+\draw[gp path] (15.447,9.537)--(15.267,9.537);
+\node[gp node right] at (2.240,9.537) {$2.05\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
@@ -145,182 +85,168 @@
 \gpsetlinewidth{1.00}
 \draw[gp path] (2.424,11.075)--(2.604,11.075);
 \draw[gp path] (15.447,11.075)--(15.267,11.075);
-\node[gp node right] at (2.240,11.075) {$2\times10^{11}$};
+\node[gp node right] at (2.240,11.075) {$2.1\times10^{11}$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (2.424,2.025)--(2.424,11.075);
+\draw[gp path] (2.424,1.845)--(2.424,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,2.025)--(2.424,1.845);
-\draw[gp path] (2.424,11.075)--(2.424,11.255);
+\draw[gp path] (2.424,1.845)--(2.424,2.025);
+\draw[gp path] (2.424,11.075)--(2.424,10.895);
 \node[gp node left,rotate=270] at (2.424,1.661) {$0$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (4.284,2.025)--(4.284,11.075);
+\draw[gp path] (4.284,1.845)--(4.284,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (4.284,2.025)--(4.284,1.845);
-\draw[gp path] (4.284,11.075)--(4.284,11.255);
+\draw[gp path] (4.284,1.845)--(4.284,2.025);
+\draw[gp path] (4.284,11.075)--(4.284,10.895);
 \node[gp node left,rotate=270] at (4.284,1.661) {$50$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (6.145,2.025)--(6.145,11.075);
+\draw[gp path] (6.145,1.845)--(6.145,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (6.145,2.025)--(6.145,1.845);
-\draw[gp path] (6.145,11.075)--(6.145,11.255);
+\draw[gp path] (6.145,1.845)--(6.145,2.025);
+\draw[gp path] (6.145,11.075)--(6.145,10.895);
 \node[gp node left,rotate=270] at (6.145,1.661) {$100$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (8.005,2.025)--(8.005,11.075);
+\draw[gp path] (8.005,1.845)--(8.005,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (8.005,2.025)--(8.005,1.845);
-\draw[gp path] (8.005,11.075)--(8.005,11.255);
+\draw[gp path] (8.005,1.845)--(8.005,2.025);
+\draw[gp path] (8.005,11.075)--(8.005,10.895);
 \node[gp node left,rotate=270] at (8.005,1.661) {$150$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (9.866,2.025)--(9.866,11.075);
+\draw[gp path] (9.866,1.845)--(9.866,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (9.866,2.025)--(9.866,1.845);
-\draw[gp path] (9.866,11.075)--(9.866,11.255);
+\draw[gp path] (9.866,1.845)--(9.866,2.025);
+\draw[gp path] (9.866,11.075)--(9.866,10.895);
 \node[gp node left,rotate=270] at (9.866,1.661) {$200$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (11.726,2.025)--(11.726,11.075);
+\draw[gp path] (11.726,1.845)--(11.726,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (11.726,2.025)--(11.726,1.845);
-\draw[gp path] (11.726,11.075)--(11.726,11.255);
+\draw[gp path] (11.726,1.845)--(11.726,2.025);
+\draw[gp path] (11.726,11.075)--(11.726,10.895);
 \node[gp node left,rotate=270] at (11.726,1.661) {$250$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (13.587,2.025)--(13.587,11.075);
+\draw[gp path] (13.587,1.845)--(13.587,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (13.587,2.025)--(13.587,1.845);
-\draw[gp path] (13.587,11.075)--(13.587,11.255);
+\draw[gp path] (13.587,1.845)--(13.587,2.025);
+\draw[gp path] (13.587,11.075)--(13.587,10.895);
 \node[gp node left,rotate=270] at (13.587,1.661) {$300$};
 \gpcolor{color=gp lt color axes}
 \gpsetlinetype{gp lt axes}
 \gpsetdashtype{gp dt axes}
 \gpsetlinewidth{0.50}
-\draw[gp path] (15.447,2.025)--(15.447,11.075);
+\draw[gp path] (15.447,1.845)--(15.447,11.075);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
 \gpsetdashtype{gp dt solid}
 \gpsetlinewidth{1.00}
-\draw[gp path] (15.447,2.025)--(15.447,1.845);
-\draw[gp path] (15.447,11.075)--(15.447,11.255);
+\draw[gp path] (15.447,1.845)--(15.447,2.025);
+\draw[gp path] (15.447,11.075)--(15.447,10.895);
 \node[gp node left,rotate=270] at (15.447,1.661) {$350$};
-\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
 \gpcolor{rgb color={0.000,0.000,0.000}}
 \gpsetlinewidth{2.00}
-\draw[gp path] (2.424,10.053)--(2.424,9.985)--(2.461,9.935)--(2.461,9.873)--(2.461,9.838)%
-  --(2.461,9.796)--(2.461,9.778)--(2.498,9.747)--(2.498,9.708)--(2.498,9.688)--(2.498,9.577)%
-  --(2.498,9.539)--(2.536,9.482)--(2.536,9.468)--(2.536,9.451)--(2.536,9.444)--(2.536,9.429)%
-  --(2.573,9.409)--(2.573,9.327)--(2.573,9.282)--(2.610,9.252)--(2.610,9.231)--(2.610,9.222)%
-  --(2.610,9.212)--(2.647,9.204)--(2.684,9.150)--(2.684,9.121)--(2.684,9.102)--(2.684,9.091)%
-  --(2.684,9.086)--(2.684,9.072)--(2.722,9.064)--(2.722,9.052)--(2.722,9.051)--(2.759,9.039)%
-  --(2.759,9.037)--(2.759,9.011)--(2.759,8.974)--(2.796,8.960)--(2.796,8.914)--(2.796,8.880)%
-  --(2.833,8.870)--(2.833,8.865)--(2.833,8.861)--(2.871,8.850)--(2.908,8.844)--(2.908,8.843)%
-  --(2.908,8.836)--(2.908,8.828)--(2.945,8.826)--(2.945,8.807)--(2.945,8.795)--(2.982,8.742)%
-  --(2.982,8.736)--(2.982,8.729)--(2.982,8.705)--(2.982,8.694)--(2.982,8.684)--(3.019,8.683)%
-  --(3.019,8.681)--(3.057,8.673)--(3.057,8.662)--(3.094,8.661)--(3.131,8.634)--(3.131,8.630)%
-  --(3.131,8.628)--(3.131,8.623)--(3.168,8.619)--(3.205,8.606)--(3.205,8.598)--(3.243,8.596)%
-  --(3.243,8.579)--(3.280,8.566)--(3.280,8.560)--(3.317,8.556)--(3.317,8.553)--(3.317,8.548)%
-  --(3.354,8.536)--(3.354,8.530)--(3.354,8.517)--(3.354,8.511)--(3.391,8.509)--(3.391,8.477)%
-  --(3.391,8.466)--(3.429,8.455)--(3.466,8.442)--(3.466,8.438)--(3.503,8.432)--(3.540,8.431)%
-  --(3.577,8.428)--(3.615,8.419)--(3.652,8.417)--(3.652,8.415)--(3.689,8.404)--(3.689,8.397)%
-  --(3.726,8.396)--(3.764,8.395)--(3.764,8.394)--(3.801,8.391)--(3.838,8.387)--(3.875,8.386)%
-  --(3.912,8.372)--(3.950,8.362)--(3.987,8.355)--(3.987,8.350)--(4.024,8.340)--(4.024,8.338)%
-  --(4.024,8.332)--(4.061,8.322)--(4.061,8.317)--(4.098,8.315)--(4.136,8.305)--(4.136,8.298)%
-  --(4.210,8.294)--(4.210,8.293)--(4.210,8.292)--(4.210,8.289)--(4.247,8.276)--(4.322,8.264)%
-  --(4.322,8.261)--(4.359,8.259)--(4.359,8.249)--(4.396,8.242)--(4.508,8.234)--(4.545,8.228)%
-  --(4.545,8.226)--(4.619,8.208)--(4.731,8.206)--(4.843,8.200)--(4.843,8.192)--(5.029,8.188)%
-  --(5.326,8.185)--(5.438,8.184)--(5.550,8.177)--(5.624,8.174)--(5.884,8.115)--(5.922,5.628)%
-  --(5.959,5.568)--(5.959,5.431)--(5.959,5.338)--(5.959,5.314)--(5.959,5.289)--(5.959,5.274)%
-  --(5.996,5.225)--(5.996,5.110)--(5.996,5.098)--(5.996,4.650)--(5.996,4.628)--(6.033,4.596)%
-  --(6.033,4.558)--(6.033,4.262)--(6.033,4.245)--(6.033,4.227)--(6.033,4.217)--(6.070,4.182)%
-  --(6.070,4.171)--(6.070,4.159)--(6.070,4.150)--(6.070,4.142)--(6.108,4.134)--(6.108,3.993)%
-  --(6.108,3.977)--(6.108,3.889)--(6.108,3.876)--(6.145,3.772)--(6.145,3.760)--(6.182,3.758)%
-  --(6.182,3.742)--(6.182,3.584)--(6.219,3.583)--(6.219,3.572)--(6.219,3.549)--(6.219,3.545)%
-  --(6.256,3.540)--(6.256,3.519)--(6.256,3.492)--(6.256,3.305)--(6.294,3.291)--(6.294,3.267)%
-  --(6.294,3.254)--(6.331,3.120)--(6.331,2.991)--(6.331,2.987)--(6.368,2.980)--(6.368,2.977)%
-  --(6.405,2.975)--(6.405,2.965)--(6.443,2.854)--(6.443,2.852)--(6.480,2.814)--(6.480,2.801)%
-  --(6.480,2.798)--(6.517,2.796)--(6.517,2.790)--(6.517,2.787)--(6.554,2.779)--(6.554,2.773)%
-  --(6.591,2.772)--(6.629,2.771)--(6.629,2.762)--(6.629,2.761)--(6.666,2.752)--(6.629,2.751)%
-  --(6.666,2.749)--(6.703,2.748)--(6.703,2.736)--(6.740,2.731)--(6.740,2.730)--(6.740,2.720)%
-  --(6.740,2.719)--(6.777,2.718)--(6.777,2.717)--(6.777,2.710)--(6.815,2.705)--(6.815,2.526)%
-  --(6.852,2.525)--(6.889,2.521)--(6.889,2.517)--(6.926,2.509)--(6.926,2.508)--(6.963,2.505)%
-  --(6.963,2.502)--(7.075,2.497)--(7.075,2.492)--(7.149,2.491)--(7.187,2.490)--(7.187,2.487)%
-  --(7.261,2.482)--(7.298,2.482)--(7.336,2.479)--(7.373,2.475)--(7.410,2.466)--(7.410,2.465)%
-  --(7.484,2.463)--(7.484,2.461)--(7.522,2.456)--(7.559,2.412)--(7.559,2.406)--(7.633,2.405)%
-  --(7.670,2.404)--(7.708,2.399)--(7.708,2.393)--(7.745,2.388)--(7.819,2.388)--(7.856,2.386)%
-  --(7.894,2.381)--(7.931,2.380)--(8.042,2.372)--(8.042,2.361)--(8.080,2.356)--(8.191,2.354)%
-  --(8.191,2.349)--(8.191,2.344)--(8.229,2.342)--(8.266,2.339)--(8.303,2.333)--(8.340,2.330)%
-  --(8.452,2.330)--(8.563,2.329)--(8.749,2.325)--(8.749,2.319)--(8.787,2.316)--(8.787,2.307)%
-  --(8.824,2.301)--(8.824,2.295)--(8.898,2.292)--(8.936,2.291)--(8.973,2.290)--(9.010,2.290)%
-  --(9.010,2.289)--(9.047,2.286)--(9.084,2.286)--(9.122,2.286)--(9.159,2.282)--(9.159,2.281)%
-  --(9.159,2.280)--(9.159,2.271)--(9.196,2.268)--(9.233,2.265)--(9.233,2.259)--(9.270,2.257)%
-  --(9.382,2.257)--(9.419,2.255)--(9.419,2.251)--(9.494,2.249)--(9.531,2.247)--(9.568,6.389)%
-  --(9.605,6.282)--(9.605,6.184)--(9.605,6.073)--(9.605,5.980)--(9.605,5.897)--(9.642,5.839)%
-  --(9.642,5.791)--(9.642,5.711)--(9.680,5.622)--(9.680,5.610)--(9.680,5.564)--(9.680,5.533)%
-  --(9.717,5.510)--(9.717,5.481)--(9.717,5.467)--(9.717,5.434)--(9.717,5.413)--(9.717,5.371)%
-  --(9.754,5.361)--(9.754,5.344)--(9.754,5.314)--(9.791,5.299)--(9.791,5.289)--(9.791,5.257)%
-  --(9.829,5.208)--(9.829,5.187)--(9.866,5.175)--(9.866,5.157)--(9.866,5.111)--(9.866,5.106)%
-  --(9.866,5.098)--(9.903,5.093)--(9.903,5.067)--(9.940,5.051)--(9.940,5.048)--(9.977,5.047)%
-  --(9.977,5.031)--(9.977,5.024)--(9.977,5.013)--(10.015,5.010)--(10.015,4.998)--(10.052,4.984)%
-  --(10.052,4.977)--(10.089,4.975)--(10.089,4.965)--(10.126,4.962)--(10.126,4.958)--(10.163,4.952)%
-  --(10.275,4.936)--(10.349,4.922)--(10.349,4.919)--(10.387,4.883)--(10.387,4.878)--(10.424,4.876)%
-  --(10.424,4.866)--(10.461,4.865)--(10.461,4.857)--(10.498,4.856)--(10.535,4.840)--(10.684,4.839)%
-  --(10.684,4.832)--(10.759,4.832)--(10.945,4.818)--(11.019,4.817)--(11.019,4.812)--(11.056,4.812)%
-  --(11.131,4.811)--(11.131,4.806)--(11.131,4.792)--(11.168,4.785)--(11.168,4.784)--(11.205,4.777)%
-  --(11.205,4.765)--(11.242,4.759)--(11.280,4.757)--(11.317,4.757)--(11.317,4.752)--(11.317,4.729)%
-  --(11.354,4.726)--(11.428,4.724)--(11.428,4.719)--(11.466,4.716)--(11.577,4.712)--(11.615,4.711)%
-  --(11.652,4.710)--(11.689,4.709)--(11.763,4.709)--(11.801,4.700)--(11.801,4.697)--(11.838,4.688)%
-  --(11.875,4.687)--(11.987,4.685)--(11.987,4.678)--(12.098,4.674)--(12.321,4.669)--(12.359,4.647)%
-  --(12.359,4.637)--(12.508,4.629)--(12.508,4.627)--(12.508,4.625)--(12.880,4.625)--(13.066,4.623)%
-  --(13.103,4.622)--(13.140,4.619)--(13.252,10.338)--(13.252,10.231)--(13.252,10.166)--(13.252,10.104)%
-  --(13.252,10.045)--(13.289,10.008)--(13.289,9.971)--(13.289,9.912)--(13.289,9.862)--(13.289,9.819)%
-  --(13.326,9.763)--(13.401,9.723)--(13.512,9.715)--(13.624,9.709)--(13.735,9.695)--(13.810,9.689)%
-  --(13.884,9.685)--(14.145,9.679)--(15.335,9.669);
+\draw[gp path] (2.424,7.390)--(2.424,7.346)--(2.461,7.315)--(2.461,7.303)--(2.461,7.264)%
+  --(2.461,7.195)--(2.461,7.125)--(2.461,7.106)--(2.498,7.072)--(2.498,7.062)--(2.498,7.038)%
+  --(2.498,7.014)--(2.536,6.994)--(2.536,6.992)--(2.536,6.976)--(2.536,6.909)--(2.536,6.861)%
+  --(2.573,6.815)--(2.573,6.779)--(2.573,6.769)--(2.573,6.761)--(2.610,6.755)--(2.610,6.732)%
+  --(2.610,6.723)--(2.610,6.694)--(2.610,6.665)--(2.647,6.642)--(2.647,6.618)--(2.647,6.605)%
+  --(2.647,6.593)--(2.684,6.564)--(2.684,6.554)--(2.684,6.550)--(2.684,6.530)--(2.722,6.509)%
+  --(2.759,6.491)--(2.759,6.486)--(2.759,6.485)--(2.796,6.479)--(2.796,6.464)--(2.796,6.452)%
+  --(2.833,6.449)--(2.833,6.438)--(2.833,6.380)--(2.871,6.369)--(2.871,6.357)--(2.871,6.356)%
+  --(2.871,6.354)--(2.871,6.333)--(2.908,6.332)--(2.908,6.320)--(2.945,6.318)--(2.982,6.296)%
+  --(2.982,6.292)--(3.019,6.276)--(3.019,6.272)--(3.019,6.268)--(3.057,6.268)--(3.094,6.266)%
+  --(3.094,6.265)--(3.131,6.261)--(3.168,6.253)--(3.168,6.241)--(3.168,6.236)--(3.168,6.235)%
+  --(3.205,6.229)--(3.205,6.221)--(3.243,6.216)--(3.243,6.193)--(3.243,6.188)--(3.280,6.133)%
+  --(3.280,6.129)--(3.317,6.119)--(3.317,6.117)--(3.354,6.117)--(3.391,6.107)--(3.429,6.096)%
+  --(3.540,6.096)--(3.577,6.096)--(3.652,6.090)--(3.652,6.087)--(3.689,6.067)--(3.689,6.060)%
+  --(3.689,6.054)--(3.726,6.052)--(3.726,6.047)--(3.764,6.047)--(3.764,6.035)--(3.838,6.032)%
+  --(3.838,6.025)--(3.838,6.022)--(3.838,6.011)--(3.912,6.010)--(3.912,6.006)--(3.950,5.996)%
+  --(3.987,5.992)--(3.987,5.990)--(3.987,5.986)--(4.024,5.979)--(4.098,5.966)--(4.173,5.965)%
+  --(4.210,5.957)--(4.284,5.951)--(4.396,5.950)--(4.470,5.950)--(4.508,5.948)--(4.508,5.947)%
+  --(4.545,5.943)--(4.619,5.942)--(4.657,5.937)--(4.657,5.936)--(4.731,5.928)--(4.805,5.925)%
+  --(4.880,5.922)--(4.917,5.914)--(4.917,5.913)--(5.029,5.912)--(5.029,5.910)--(5.066,5.908)%
+  --(5.066,5.901)--(5.103,5.899)--(5.252,5.898)--(5.289,5.886)--(5.289,5.884)--(5.326,5.882)%
+  --(5.363,5.882)--(5.363,5.878)--(5.401,5.876)--(5.475,5.870)--(5.587,5.862)--(5.698,5.860)%
+  --(5.773,5.860)--(5.810,5.860)--(5.847,5.854)--(5.922,5.850)--(5.959,5.846)--(5.996,5.845)%
+  --(6.033,5.838)--(6.070,4.470)--(6.070,4.423)--(6.070,4.367)--(6.070,4.350)--(6.070,4.338)%
+  --(6.108,4.324)--(6.108,4.307)--(6.108,4.270)--(6.108,4.178)--(6.145,4.165)--(6.145,4.149)%
+  --(6.145,4.138)--(6.145,4.130)--(6.145,4.112)--(6.182,4.100)--(6.182,4.086)--(6.182,4.084)%
+  --(6.182,4.079)--(6.219,4.069)--(6.219,4.054)--(6.219,3.920)--(6.256,3.840)--(6.294,3.835)%
+  --(6.294,3.832)--(6.331,3.823)--(6.331,3.820)--(6.368,3.817)--(6.368,3.811)--(6.405,3.801)%
+  --(6.443,3.687)--(6.443,3.682)--(6.443,3.561)--(6.443,3.557)--(6.480,3.555)--(6.480,3.549)%
+  --(6.480,3.482)--(6.517,3.468)--(6.554,3.460)--(6.591,3.455)--(6.591,3.449)--(6.591,3.448)%
+  --(6.666,3.441)--(6.703,3.441)--(6.703,3.432)--(6.703,3.424)--(6.740,3.415)--(6.777,3.413)%
+  --(6.815,3.402)--(6.815,3.319)--(6.852,3.228)--(6.889,3.227)--(6.963,3.226)--(6.963,3.225)%
+  --(7.001,3.219)--(7.001,3.210)--(7.075,3.204)--(7.075,3.198)--(7.112,3.191)--(7.187,3.190)%
+  --(7.224,3.189)--(7.261,3.188)--(7.298,3.182)--(7.336,3.178)--(7.373,3.172)--(7.447,3.167)%
+  --(7.447,3.166)--(7.633,3.165)--(7.670,3.160)--(7.670,3.155)--(7.670,3.152)--(7.819,3.150)%
+  --(7.819,3.149)--(7.856,3.146)--(7.894,3.145)--(8.005,3.145)--(8.042,3.142)--(8.042,3.136)%
+  --(8.117,3.136)--(8.154,3.136)--(8.266,3.134)--(8.266,3.129)--(8.303,3.127)--(8.340,3.126)%
+  --(8.377,3.125)--(8.377,3.045)--(8.377,3.044)--(8.415,3.043)--(8.415,3.039)--(8.452,3.038)%
+  --(8.489,3.037)--(8.563,3.030)--(8.563,3.005)--(8.601,2.995)--(8.601,2.991)--(8.638,2.991)%
+  --(8.675,2.987)--(8.712,2.984)--(8.749,2.982)--(8.824,2.978)--(8.898,2.973)--(9.010,2.971)%
+  --(9.047,2.969)--(9.159,2.968)--(9.196,2.965)--(9.233,2.962)--(9.345,2.961)--(9.531,2.957)%
+  --(9.568,2.950)--(9.642,2.947)--(9.717,2.947)--(9.791,6.492)--(9.829,6.409)--(9.829,6.358)%
+  --(9.829,6.303)--(9.829,6.238)--(9.866,6.165)--(9.866,6.072)--(9.903,6.050)--(9.903,6.029)%
+  --(9.903,6.010)--(9.903,5.998)--(9.940,5.954)--(9.940,5.895)--(9.940,5.832)--(9.977,5.780)%
+  --(10.015,5.774)--(10.052,5.726)--(10.052,5.701)--(10.052,5.684)--(10.089,5.676)--(10.089,5.661)%
+  --(10.126,5.638)--(10.163,5.620)--(10.201,5.603)--(10.275,5.587)--(10.275,5.578)--(10.312,5.577)%
+  --(10.312,5.570)--(10.349,5.562)--(10.387,5.552)--(10.387,5.550)--(10.387,5.547)--(10.424,5.525)%
+  --(10.424,5.518)--(10.461,5.517)--(10.573,5.509)--(10.610,5.498)--(10.722,5.495)--(10.722,5.488)%
+  --(10.759,5.486)--(10.759,5.480)--(10.908,5.469)--(10.908,5.466)--(10.908,5.458)--(10.945,5.454)%
+  --(10.945,5.443)--(10.945,5.435)--(11.019,5.432)--(11.019,5.427)--(11.354,5.426)--(11.763,5.423)%
+  --(11.801,5.419)--(11.875,5.413)--(11.912,5.403)--(11.987,5.398)--(12.061,5.393)--(12.098,5.365)%
+  --(12.135,5.354)--(12.210,5.350)--(12.247,5.344)--(12.433,5.344)--(12.470,5.333)--(12.508,5.323)%
+  --(12.545,5.314)--(12.582,5.307)--(12.619,5.274)--(12.917,5.271)--(13.140,5.268)--(13.214,5.267)%
+  --(13.252,5.261)--(13.363,5.257)--(13.401,5.254)--(13.475,5.251)--(13.549,10.647)--(13.661,10.637)%
+  --(13.735,10.616)--(14.926,10.595);
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
-\draw[gp path] (2.424,11.075)--(2.424,2.025)--(15.447,2.025)--(15.447,11.075)--cycle;
-\node[gp node center,rotate=-270] at (-0.812,6.550) {Objective value};
-\node[gp node center] at (8.935,0.215) {Relative time [S]};
+\draw[gp path] (2.424,11.075)--(2.424,1.845)--(15.447,1.845)--(15.447,11.075)--cycle;
+\node[gp node center,rotate=-270] at (-0.812,6.460) {Objective value};
+\node[gp node center] at (8.935,0.215) {Relative time ($	au$) [S]};
 \node[gp node center] at (8.935,11.537) {Objective value for Weekly Schedule};
 %% coordinates of the plot area
-\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{2.025cm}}{\pgfpoint{15.447cm}{11.075cm}}
+\gpdefrectangularnode{gp plot 1}{\pgfpoint{2.424cm}{1.845cm}}{\pgfpoint{15.447cm}{11.075cm}}
 \endtikzpicture
 %% gnuplot variables
