--- a/papers/actor-based-large-neighborhood-search/tex/discussion.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/discussion.tex
@@ -1,45 +1,84 @@
 \section{Discussion}
 \label{sec:4-discussion}
-Maintenance scheduling efficiently solves a complex scheduling problem by
-the use of multiple actors. Through the use of actors the  process handles
-uncertainty that is difficult to reason about, using models with different
-levels of aggregation where each actors understands how to exploit his model.
-As uncertainties manifest themselves the actors/models handle the uncertainty
-through  communication. To further understand the implications of the approach
-the discussion will be divided into three sections: 1. actors and  integration;
-2. continuous optimization allows asynchronous optimization; 3. future research.
+The maintenance scheduling effectively solves a complex scheduling problem by
+using multiple actors. Through the use of actors the scheduling process handles
+uncertainty that is difficult to reason about in a single mathematical model are
+easily solved through coordination. Each stakeholder in the process has his own
+model each with different levels of aggregation, where each actor understands 
+how to exploit his own model.
+To further understand the approach
+the discussion will be divided into three sections: \ref{sec:discussion:actors_and_integration} 
+actors and integration;
+\ref{sec:discussion:continuous_optimization} continuous optimization allows asynchronous optimization; 
+and \ref{sec:discussion:future_research} future research.
 
 \subsection{Actors \& Integration}
+\label{sec:discussion:actors_and_integration}
 Often in operation research the failure to reliably solve operational problems in 
 industry are not due to the problems being computationally intractable \cite{gendreauHandbookMetaheuristics2019} but a
 practical problem of connecting data streams so that the solution approach continually
-receives dynamic data to handle changes and then afterwards connecting the resulting solutions
-to the relevant stakeholders (actors) through a relevant interface \cite{meignanReviewTaxonomyInteractive2015}.
-The actor-based approach  proposed in this paper makes integration easier by
+receives dynamic data to handle changes and then providing the resulting solutions
+to the relevant actors (stakeholders) through a relevant interface \cite{meignanReviewTaxonomyInteractive2015}.
+The actor-based approach proposed in this paper makes integration easier by
 naturally encapsulating a model with a reliable interface. 
 
 \subsection{Continuous Optimization}
-With actor-based metaheuristics the optimization loop can run 
-indefinitely optimizing based on the latest available information. This may seem like a detail as you could argue that you should only ever optimize the schedule when there is 
-an explicit need for it, but consider the case when you start adding more than two actor to a scheduling system, then there arises a need
-to coordinate people in time as each will have to run their optimizer on after another.
+\label{sec:discussion:continuous_optimization}
+With actor-based metaheuristics, the optimization loop can run indefinitely,
+optimizing based on the latest available information. This may seem like a
+detail as you could argue that you should only ever optimize the schedule
+when there is an explicit need for it, but consider the case when you start
+adding more than two actors to a scheduling system, then there arises a need
+to coordinate people temporally as each will have to run their optimizing
+process one after another. This is depicted in figure~\ref{fig:discussion:hierarchical_model_setup}
+where the output of one model is used as the input to the next one, leading
+to the hierarchical model setup.
 
 \begin{figure}[H]
 	\input{../../figures/multimodel-setup.tex}
+	\label{fig:discussion:hierarchical_model_setup}
+	\caption{Effects us using hierarchical models setups in human-guided search metaheuristics.
+	Due to the dependent nature of each metaheuristics it becomes crucial that the running of 
+	the metaheuristics are well coordinated between the metaheuristics.}
 \end{figure}
+
+In practice there are multiple problems with using a hierarchical setup.
+Usually the largest one is that the information and knowledge needed to 
+perform a feasible schedule is usually found in the lower levels of the 
+hierarchicy. In maintenance scheduling the operational setting, where the
+technicians are working, is usually so complex that it not feasible to 
+centralize the knowledge that is required to create and execute a 
+schedule. Figure~\ref{fig:discussion:asynchronous_setup}
+shows the kind of non-hierarchical setup that an actor-based approach 
+allows for.
 
 \begin{figure}[H]
 	\input{../../figures/asynchronous_setup.tex}
+	\caption{Asynchronous model setup where each metaheuristic runs in perpetuity. In this setup
+	there is no need to coordinate stakeholders to run the metaheuristics. Each actor in the 
+	scheduling process will always have the solutions of the other stakeholder available to 
+	him to guide his own search.}
+	\label{fig:discussion:asynchronous_setup}
 \end{figure}
 
+When the optimization approaches, optimize continuously it becomes possible
+to enable tight integration between the different model implementations. Where 
+instead of running models to completion you simply handle changes in model 
+parameters, model solutions, user inputs, and in the dynamic data source as 
+they occur instead of making restarts.
+
 \subsection{Future Research}
-The primary future research of this project is to demonstrate that the system described here can be 
-used to model and optimize larger scale scheduling processes. A possible extension here is shown in
-\ref{fig:ordinator-architecture} where each of 
-the actors run a metaheuristic and that each metaheuristic will shared its solutions with the 
-other metaheuristics through atomic pointer swapping. Communicate with the end-user through message
-passing, integrate with a persistence storage through mutex locks, and the lifecycle of each of the 
-metaheuristics will be controlled by the orchestrator through message passing.
+\label{sec:discussion:future_research}
+The future research of this project is to demonstrate that
+the actor-based approach described here can be used to model and optimize 
+multi-actor scheduling processes. 
+Figure~\ref{fig:ordinator-architecture}
+shows a scheduling system architecture where each of the actors run an actor-based metaheuristic
+and that each metaheuristic will share its solutions with the other
+metaheuristics through atomic pointer swapping. Communicate with the end-user
+through message passing, integrate with a persistence storage through mutex
+locks, and the lifecycle of each of the metaheuristics will be controlled by
+the orchestrator through message passing.
 
 \begin{figure}[H]
 	\centering
@@ -52,3 +91,6 @@ metaheuristics will be controlled by the orchestrator through message passing.
 	}
 	\label{fig:ordinator-architecture}
 \end{figure}
+The next step in this research direction will be to model the remaining stakeholder as their own 
+AbLNS metaheuristics, and then make them communicate together. Each exposing solutions to each 
+other in real-time.
